--- a/localisation/braz_por/MD_focus_BRA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_BRA_l_braz_por.yml
@@ -49,7 +49,7 @@
  BRA_encourage_consumption: "Incentivar o Consumo"
  BRA_encourage_consumption_desc: "Ao incentivar o consumo em nossa população, podemos estimular o crescimento econômico em direção a uma economia mais moderna e voltada para o consumidor."
  BRA_national_developmentalism: "Desenvolvimentismo Nacional"
- BRA_national_developmentalism_desc: "O Desenvolvimentismo Nacional é o que tornou possível para o Brasil industrializar e se desenvolver rapidamente. Essas políticas desenvolvimentistas não deveriam ter sido abandonadas e devemos trabalhar para reintroduzi-las."
+ BRA_national_developmentalism_desc: "O Nacional Desenvolvimentismo é o que tornou possível ao Brasil se industrializar e se desenvolver rapidamente. Essas políticas desenvolvimentistas não deveriam ter sido abandonadas e devemos trabalhar para implementá-las."
  BRA_social_programs_agenda_lula: "Agenda de Programas Sociais"
  BRA_social_programs_agenda_lula_desc: "Lula, assim como todo o Partido dos Trabalhadores, apoia um Estado forte que possa atender à demanda do povo por uma vida digna. Para cumprir a agenda do partido, devemos criar novos programas sociais."
  BRA_expand_social_benefits: "Expandir Benefícios Sociais"
@@ -545,7 +545,7 @@
  BRA_restoration_image_desc: "Após a saída de Cardoso, é hora de seus sucessores reconstruírem e reimaginarem o que o PSDB pode ser."
  BRA_underdog: "Efeito do Azarão"
  BRA_underdog_desc: "Ser o azarão tem apelo para muitos, pois você luta sem saber se vai vencer ou não, mas acredita em algo pelo qual vale a pena lutar. Assim como uma raposa encurralada, marcharemos adiante."
- BRA_social_democracy: "Democracia Social Brasileira"
+ BRA_social_democracy: "Social Democracia Brasileira"
  BRA_social_democracy_desc: "A democracia social refere-se a um amplo espectro de ideologias de esquerda que defendem justiça econômica e social em maior medida do que a maioria dos ramos do liberalismo. Os sociais-democratas buscam humanizar o capitalismo para conter a desigualdade, a opressão e fomentar a democracia. Nosso povo adora o sistema social democrata. Vamos adotá-lo."
  BRA_liberal_resurgence: "Ressurgimento Liberal"
  BRA_liberal_resurgence_desc: "O liberalismo é uma ideologia centrista que promove os direitos individuais e enfatiza a liberdade sobre a expansão do poder do Estado. Os liberais tendem a apoiar políticas sociais progressistas dentro do quadro de um mercado livre com comércio livre com o resto do mundo. A população brasileira torna-se cada vez mais liberal. Nos tornaremos um governo liberal, a favor do povo."
@@ -554,7 +554,7 @@
  BRA_reduce_debts: "Reduzir Nossa Dívida"
  BRA_reduce_debts_desc: "Para aumentar a popularidade do partido e melhorar a economia do Brasil, precisamos reduzir nossa dívida externa."
  BRA_expansive_spending: "Gastos Expansivos"
- BRA_expansive_spending_desc: "Podemos gastar uma grande quantia de dinheiro e melhorar nossa economia consideravelmente investindo em indústrias."
+ BRA_expansive_spending_desc: "Podemos gastar uma grande quantia de dinheiro e melhorar muito nossa economia investindo em indústrias."
  BRA_foreign_buyouts: "Buscar Compras Estrangeiras"
  BRA_foreign_buyouts_desc: "Podemos obter apoio e gastar uma pequena quantia de dinheiro para melhorar nossa economia."
  BRA_ciro_gomes: "Ciro Gomes nos Endossa"
