--- a/localisation/braz_por/MD_focus_CES_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_CES_l_braz_por.yml
@@ -234,9 +234,9 @@
  CES_airbus_stuff: "Aviões de transporte Airbus"
  CES_airbus_stuff_desc: "Podemos estabelecer contratos com a Airbus para adquirir aviões de transporte para as necessidades logísticas da nossa força aérea."
  CES_euro_helicopters: "Helicópteros Europeus"
- CES_euro_helicopters_desc: "A compra dos mais novos helicópteros europeus beneficiará enormemente a nossa força aérea."
+ CES_euro_helicopters_desc: "Comprar os mais novos helicópteros europeus beneficiará muito a nossa força aérea."
  CES_czech_jets: "Jatos de treinamento da Tchecoslováquia"
- CES_czech_jets_desc: "Após a queda do bloco oriental, que os estados pós-comunistas possam vender seus equipamentos aposentados. Talvez precisemos comprá-los para nossa força aérea."
+ CES_czech_jets_desc: "Após a queda do bloco oriental, muitos estados pós-comunistas podem vender seus equipamentos aposentados. Podemos precisar comprá-los para nossa força aérea."
  CES_tai_anka: "Drones Turcos"
  CES_tai_anka_desc: "Os drones turcos têm se recomendado muito durante os conflitos recentes. Talvez precisemos comprar alguns deles."
  CES_bell_uh: "SINO-UH"
@@ -337,8 +337,6 @@
  CES_liberals_modifier10_tt: "$CES_liberals_modifier_tt_intro$ \n £population_texticon População Mensal: §G+5,00%§! \n £stability_texticon Estabilidade: §G+2,00%§!\n £social_cost_multiplier_modifier_texticon §YCusto de Gastos Sociais§! Multiplicador: §R+5,00% §!\n\n"
  CES_liberals_modifier11_tt: "$CES_liberals_modifier_tt_intro$ \n£research_speed_texticon Velocidade de pesquisa: §G+15,00%§! \n £stability_texticon Estabilidade: §G+8,00%§! \n\n"
  CES_liberals_modifier12_tt: "$CES_liberals_modifier_tt_intro$ \n£western_outlook_campaign_cost_modifier_texticon Apoio Diário Pró-Ocidente: §G+0.04§! \n\n"
- CES_economical_affairs: "Assuntos Econômicos"
- CES_economical_affairs_desc: "O início dos anos 2000 marcou um período de transformação para os países da Ásia Central, à medida que navegavam no complexo cenário do desenvolvimento económico e da transição."
  CES_debt_reafctoring: "Refatoração da Dívida"
  CES_debt_reafctoring_desc: "Refatorar nossa dívida nos permitirá um pouco mais de liberdade com os gastos do nosso governo."
  CES_exploit_natural_resources: "Explorar Recursos Naturais"
@@ -353,8 +351,6 @@
  CES_metal_extraction_desc: "A Ásia Central é um centro para a extração de vários metais, incluindo cobre, prata e elementos de terras raras. As extensas reservas minerais da região estimularam uma indústria de mineração vibrante"
  CES_increase_privatisation: "Aumentar a Privatização"
  CES_increase_privatisation_desc: "Iremos beneficiar mais com a privatização, mas ela irá enfraquecer-nos da influência estrangeira."
- CES_enlargen_the_mines: "Ampliar as minas"
- CES_enlargen_the_mines_desc: "A ampliação das minas é necessária para expandir nossa indústria de mineração."
  CES_natural_gas: "Gás Natural"
  CES_natural_gas_desc: "A extração de gás na Ásia Central envolve a perfuração, processamento e transporte de gás natural para atender às demandas energéticas nacionais e internacionais. Os recursos de gás da região têm importância econômica substancial, promovendo tanto a cooperação regional quanto o comércio global de energia."
  CES_oil_extraction: "Extração de Petróleo"
@@ -379,7 +375,7 @@
  centrasiaev.1.a: "Apoio Educacional"
  centrasiaev.1.b: "Apoio Econômico"
  centrasiaev.1.c: "Apoio Social"
- CES_industry_focus_idea: "Apoio Econômico do ADB"
+ CES_industry_focus_idea: "Apoio econômico do ADB"
  CES_education_focus_idea: "Apoio educacional do ADB"
  CES_social_focus_idea: "Apoio Social do ADB"
  CES_national_invest_strategy: "Estratégia Nacional de Investimentos"
@@ -418,7 +414,7 @@
  CES_attract_tourists: "Atrair Turistas"
  CES_attract_tourists_desc: "Atrair Turistas"
  CES_special_gambling_regions: "Regiões especiais de jogos de azar"
- CES_special_gambling_regions_desc: "O Pur Ministro da Economia propôs um projeto de regiões especiais de jogos para aumentar nossa economia."
+ CES_special_gambling_regions_desc: "Nosso ministro da Economia propôs um projeto de regiões especiais de jogos de azar para aumentar nossa economia."
  CES_russian_it_specialists: "shniks russos de TI"
  CES_russian_it_specialists_desc: "Os técnicos de TI russos estão procurando um novo lugar para colocar suas empresas. Nosso país é o lugar perfeito para isso!"
  CES_agricultural_reneissance: "Renascença Agrícola"
@@ -1291,3 +1287,7 @@
  UZB_karakalpakstan.4.a: "De volta aos Karakalpaks"
  UZB_karakalpakstan.4.b: "De volta aos uzbeques"
  Karakalpaks_rebelled_yes: "Karakalpaquistão rebelou-se"
+ CES_economic_affairs: "Assuntos Econômicos"
+ CES_economic_affairs_desc: "O início dos anos 2000 marcou um período de transformação para os países da Ásia Central, à medida que eles navegavam no complexo cenário de desenvolvimento econômico e transição."
+ CES_enlarge_the_mines: "Ampliar as Minas"
+ CES_enlarge_the_mines_desc: "A ampliação das minas é necessária para expandir nossa indústria de mineração."
