--- a/localisation/braz_por/MD_focus_EU_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_EU_l_braz_por.yml
@@ -3334,3 +3334,4 @@
  EUvote.4.t: "A votação do Conselho da UE está pronta para sessão"
  EUvote.4.d: "O Conselho Europeu está pronto para sessão. Você pode optar por propor algo ao Conselho Europeu ou a IA proporá um projeto de lei para sessão em duas semanas."
  EUvote.4.a: "Para as urnas!"
+ EU_level_of_breaches_less_than_3_tt: "O nível de violação dos valores da União Europeia é §YMenor que§! 3 (Violações atuais: [?THIS.breach_of_EU_value|0R])\n"
