--- a/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
@@ -889,14 +889,14 @@
  GEO_money_navyusa: "Programa de Parceria da Marinha dos EUA"
  GEO_patrol_cather: "Guarda Costeira Georgiana"
  geo_misc.3.t: "Geórgia propõe um pacto de não agressão"
- geo_misc.3.d: "A Geórgia deseja alcançar uma paz sólida na região, não tendo um pacto assinado por ambos os nossos países."
+ geo_misc.3.d: "A Geórgia quer alcançar uma paz forte na região por meio da assinatura de um pacto entre ambos os países."
  geo_misc.3.a: "Boa ideia!"
  geo_misc.3.b: "Nunca"
  geo_misc.4.t: "Rússia Nega"
  geo_misc.4.d: "A Rússia não assinará um pacto conosco."
  geo_misc.4.a: "Triste"
  geo_misc.5.t: "Geórgia propõe um pacto de não agressão"
- geo_misc.5.d: "A Geórgia deseja alcançar uma paz sólida na região, não tendo um pacto assinado por ambos os nossos países."
+ geo_misc.5.d: "A Geórgia quer alcançar uma paz forte na região por meio da assinatura de um pacto entre ambos os países."
  geo_misc.5.a: "Boa ideia!"
  geo_misc.5.b: "Nunca"
  geo_misc.5.c: "Nunca"
