--- a/localisation/braz_por/MD_focus_SPR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SPR_l_braz_por.yml
@@ -454,7 +454,7 @@
  SPR_anti_nationalism_desc: "Fazer campanha contra o nacionalismo veemente e apresentar uma alternativa mais forte fará a nação avançar. A regressão não ajuda ninguém na Espanha."
  SPR_the_post_capitalism_ideology: "A ideologia pós-capitalismo"
  SPR_the_post_capitalism_ideology_desc: "As mentiras do capitalismo e seus danos são mais profundos do que a superfície. Mover-se para o mundo pós-capitalista fará com que nossa nação floresça em uma época em que outras estão atoladas pelo engano da elite."
- SPR_decommodify_the_basics: "Desmercantilizar o básico"
+ SPR_decommodify_the_basics: "Descomodifique o básico"
  SPR_decommodify_the_basics_desc: "O básico da vida não deve ser considerado um bem de luxo nem uma mercadoria. É um básico e deve ser tratado como tal."
  SPR_the_peoples_government: "O Governo do Povo"
  SPR_the_peoples_government_desc: "O governo é para o povo e apenas para o povo."
@@ -1807,8 +1807,6 @@
  SPR_end_the_loophole_idea_desc: "Acabar com as brechas fiscais fornecidas em nosso código tributário ajudará a compensar a carga tributária de nossos cidadãos mais pobres e colocá-la firmemente nos ombros dos ricos."
  SPR_keynesian_economic_idea: "Política Econômica Keynesiana"
  SPR_keynesian_economic_idea_desc: "A transição do modelo econômico do monetarismo para a teoria keynesiana pode permitir uma benção no crescimento econômico da Espanha. Os preços são inerentemente rígidos, então devemos manter o papel do governo na economia."
- SPR_decommdify_the_basics_idea: "Descomdificar o básico"
- SPR_decommdify_the_basics_idea_desc: "O básico não deve ser considerado uma commodity. É um básico e deve ser tratado como tal."
  SPR_collectiveness_egalitarianism_idea: "Igualitarismo Coletivo"
  SPR_collectiveness_egalitarianism_idea_desc: "Garantir as necessidades de cada pessoa e garantir que tenham ampla oportunidade garante que o coletivo permaneça forte e próspero."
  SPR_libertad_idea: "Liberdade"
@@ -1848,3 +1846,5 @@
  galicians_loc: "Galegos (Galegos)"
  andalucians_loc: "Andaluzes (andaluzes)"
  canarians_loc: "Canárias"
+ SPR_decommodify_the_basics_idea: "Descomodifique o básico"
+ SPR_decommodify_the_basics_idea_desc: "O básico não deve ser considerado uma mercadoria. É básico e deve ser tratado como tal."
