--- a/localisation/braz_por/MD_focus_TIE_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_TIE_l_braz_por.yml
@@ -14,7 +14,7 @@
  TIE_punching_above: "Influência Política de Toubou"
  TIE_punching_above_desc: "No Chade, muitos membros da elite política do país são etnicamente Toubou. Os Toubou sempre foram superiores ao seu peso, apesar de serem uma minoria, e a intriga política no Chade trouxe-lhes muitas lições."
  TIE_clan_elders: "Anciãos do Clã"
- TIE_clan_elders_desc: "Os anciões dos clãs Toubou estão arbitrando questões judiciais entre os clãs, bem como lidando com parte do discurso político geral que conduzirá o país adiante."
+ TIE_clan_elders_desc: "Os anciãos dos clãs Toubou arbitram questões judiciais entre os clãs, além de lidar com parte do discurso político geral que levará o país adiante."
  TIE_natron: "Mineração de Natrão"
  TIE_natron_desc: "Os Toubou estão extraindo natrão, uma substância semelhante ao sal com muitas aplicações domésticas."
  TIE_trans_saharan_trade_1: "Comércio Trans-Saariano"
@@ -77,31 +77,31 @@
  TIE_diversify_our_economy_desc: "Embora cuidar do gado e criar tâmaras proporcione uma vida pacífica, não é uma boa maneira de ganhar dinheiro. Precisamos encontrar outras fontes de renda para nosso governo."
  TIE_mine_natron: "Meu Natrão"
  TIE_mine_natron_desc: "Natron é uma substância semelhante ao sal encontrada em antigos lagos secos. Costumava ser usado como ingrediente em sabonetes, enxaguantes bucais, cremes dentais, anti-sépticos, inseticidas e na fabricação de couro. No entanto, nos tempos modernos, foi substituído principalmente por carbonato de sódio em quase todas as aplicações. Nosso povo ainda o extrai e o utiliza para seus próprios bens domésticos. Deveríamos aumentar esta mineração para reduzir a nossa dependência das importações estrangeiras de carbonato de sódio."
- TIE_survey_for_gold: "Survey For Gold"
- TIE_survey_for_gold_desc: "There are rumours of gold in them hills. We need to find it and start mining."
- TIE_new_trans_saharan_trade: "Reborn Trans-Saharan Trade"
- TIE_new_trans_saharan_trade_desc: "The Trans-Saharan trade routes used to go straight through our territory. Nowadays, not much is left from that wealth. With our increased resource production, we need to revive the trade routes so we can maximise our potential."
- TIE_trans_saharan_trade_niger: "Trans-Saharan Trade Route To [NGR.GetName]"
- TIE_trans_saharan_trade_niger_desc: "The main export of [NGR.GeNameDef] is gold. By trading with them, we are bound to learn something new about gold mining."
- TIE_trans_saharan_trade_libya: "Trans-Saharan Trade Route To [LBA.GetName]"
+ TIE_survey_for_gold: "Pesquisa para ouro"
+ TIE_survey_for_gold_desc: "Há rumores de ouro naquelas colinas. Precisamos encontrá-lo e começar a minerar."
+ TIE_new_trans_saharan_trade: "O comércio transaariano renascido"
+ TIE_new_trans_saharan_trade_desc: "As rotas comerciais Transaarianas costumavam passar direto pelo nosso território. Hoje em dia, não resta muito dessa riqueza. Com nossa produção de recursos aumentada, precisamos reviver as rotas comerciais para que possamos maximizar nosso potencial."
+ TIE_trans_saharan_trade_niger: "Rota Comercial Transaariana para [NGR.GetName]"
+ TIE_trans_saharan_trade_niger_desc: "A principal exportação de [NGR.GeNameDef] é ouro. Ao negociar com eles, estamos fadados a aprender algo novo sobre mineração de ouro."
+ TIE_trans_saharan_trade_libya: "Rota Comercial Transaariana para [LBA.GetName]"
  TIE_trans_saharan_trade_libya_desc: "A principal exportação de [LBA.GetNameDef] é o petróleo. Infelizmente, não tivemos tanta sorte em encontrar petróleo no nosso país. Talvez com a [LBA.GetAdjective] National Oil Corporation possamos encontrar alguns?"
- TIE_trans_saharan_trade_chad: "Trans-Saharan Trade Route To [CHA.GetName]"
- TIE_trans_saharan_trade_chad_desc: "[CHA.GetNameDef] exports both oil and gold. With [CHA.GetAdjective] help we will be able to boost our gold and oil production."
- TIE_build_an_airport: "Build An Airport"
- TIE_build_an_airport_desc: "There are very few roads in and out of Tibesti. To improve our connectivity, we need to build a small airstrip in our capital."
- TIE_establish_air_force: "Establish An Airforce"
- TIE_establish_air_force_desc: "We don't have much of an airforce, if even an army. However, with our newly built airstrip, and our growing economy, we need some kind of leverage over our neighbours. Sure we can find some leftover used fighter jets on the market?"
- TIE_import_tourists: "Encourage Tourism"
- TIE_import_tourists_desc: "There are many natural wonders to see in the Tibesti Mountains, such as the $TIE_soborom_hot_springs$. We need to use our ties with a Western country to kick-start a tourism boom."
- TibestiFocusEvents.1.t: "[FROM.GetNameDef] Wants To Bend The Knee"
- TibestiFocusEvents.1.d: "Our Jihadist brothers from [FROM.GetNameDef] have contacted us. They want to join our struggle in the international Jihad and help us fight the decadent West. What should we say?"
- TibestiFocusEvents.1.a: "We accept their allegiance"
- TibestiFocusEvents.1.b: "We have other plans for them"
- TibestiFocusEvents.2.t: "[FROM.GetNameDef] Accepts Our Allegiance"
- TibestiFocusEvents.2.d: "Our Jihadist brothers from [FROM.GetNameDef] have agreed to let us join their international Jihad."
+ TIE_trans_saharan_trade_chad: "Rota Comercial Transaariana para [CHA.GetName]"
+ TIE_trans_saharan_trade_chad_desc: "[CHA.GetNameDef] exporta petróleo e ouro. Com a ajuda de [CHA.GetAdjective] seremos capazes de aumentar nossa produção de ouro e petróleo."
+ TIE_build_an_airport: "Construir um aeroporto"
+ TIE_build_an_airport_desc: "Há muito poucas estradas entrando e saindo de Tibesti. Para melhorar nossa conectividade, precisamos construir uma pequena pista de pouso em nossa capital."
+ TIE_establish_air_force: "Estabelecer uma força aérea"
+ TIE_establish_air_force_desc: "Não temos muita força aérea, nem mesmo um exército. No entanto, com nossa pista de pouso recém-construída e nossa economia crescente, precisamos de algum tipo de vantagem sobre nossos vizinhos. Tem certeza de que podemos encontrar alguns jatos de caça usados ​​no mercado?"
+ TIE_import_tourists: "Incentivar o Turismo"
+ TIE_import_tourists_desc: "Há muitas maravilhas naturais para ver nas Montanhas Tibesti, como as $TIE_soborom_hot_springs$. Precisamos usar nossos laços com um país ocidental para dar início a um boom turístico."
+ TibestiFocusEvents.1.t: "[FROM.GetNameDef] Quer dobrar o joelho"
+ TibestiFocusEvents.1.d: "Nossos irmãos jihadistas de [FROM.GetNameDef] nos contataram. Eles querem se juntar à nossa luta na Jihad internacional e nos ajudar a lutar contra o Ocidente decadente. O que devemos dizer?"
+ TibestiFocusEvents.1.a: "Nós aceitamos a sua lealdade"
+ TibestiFocusEvents.1.b: "Temos outros planos para eles"
+ TibestiFocusEvents.2.t: "[FROM.GetNameDef] Aceita nossa fidelidade"
+ TibestiFocusEvents.2.d: "Nossos irmãos jihadistas de [FROM.GetNameDef] concordaram em nos deixar participar de sua Jihad internacional."
  TibestiFocusEvents.2.a: "Ótimo"
- TibestiFocusEvents.3.t: "[FROM.GetNameDef] Rejects Our Allegiance"
- TibestiFocusEvents.3.d: "Our Jihadist brothers from [FROM.GetNameDef] have rejected our offer to join their international Jihad."
+ TibestiFocusEvents.3.t: "[FROM.GetNameDef] Rejeita nossa lealdade"
+ TibestiFocusEvents.3.d: "Nossos irmãos jihadistas de [FROM.GetNameDef] rejeitaram nossa oferta de nos juntar à sua Jihad internacional."
  TibestiFocusEvents.3.a: "Maldição"
  TibestiFocusEvents.4.t: "[FROM.GetNameDef] Wants To Join Our Country"
  TibestiFocusEvents.4.d: "The government of [FROM.GetNameDef] has offered us a request that their nation is joined with ours. After the 1st Chadian Civil War, the winning president was of Toubou origin, and he received that position with the military help from Gaddafi. There were talks of possibly unifying Chad with Libya. That president is ousted and gone, but it seems the idea of unification with Libya still lives on in the hearts of the Toubou."
