--- a/localisation/french/MD_focus_BRA_l_french.yml
+++ b/localisation/french/MD_focus_BRA_l_french.yml
@@ -49,7 +49,7 @@
  BRA_encourage_consumption: "Encourager la consommation"
  BRA_encourage_consumption_desc: "Il serait possible de stimuler une croissance artificielle vers une économie de consommation bien plus moderne en encourageant la populace à y prendre part."
  BRA_national_developmentalism: "Développementalisme environnemental"
- BRA_national_developmentalism_desc: "Le développementalisme environnemental a permis au Brésil de se développer et industrialiser rapidement. Ces réformes développementalistes n'aurait pas dûes être abandonnées et nous devrions travailler pour les restaurer."
+ BRA_national_developmentalism_desc: "C'est grâce au développement national que le Brésil a pu s'industrialiser et se développer rapidement. Ces politiques développementalistes ne doivent pas être abandonnées et nous devons œuvrer pour les mettre en œuvre."
  BRA_social_programs_agenda_lula: "Programme de réformes sociales"
  BRA_social_programs_agenda_lula_desc: "Lula, ainsi que l'entièreté du parti des travailleurs, supporte l'idée qu'un état puissant doit agir en état providence. De nouvelles réformes sociales doivent être mises en place pour réaliser les ambitions du parti."
  BRA_expand_social_benefits: "Etendre les bénéfices sociaux"
@@ -521,52 +521,52 @@
  BRA_anti_corruption_measures_desc: "Le ministère public fédéral (MPF) a proposé une campagne pour mobiliser le Congrès afin d'adopter 10 mesures contre la corruption. Celles-ci pourraient contribuer à réduire considérablement la corruption dans notre pays."
  BRA_parties_of_the_left: "Les partis de gauche"
  BRA_parties_of_the_left_desc: "Nous devons continuer avec notre gouvernement de gauche. Nous avons fait beaucoup de bonnes choses dans les gouvernements précédents."
- BRA_psl_growth: "Rise of The PSL"
- BRA_psl_growth_desc: "With Bolsonaro's popularity growing more and more, his party, PSL, is also growing very fast, even more so in the run-up to the elections."
- BRA_acquit_pmdb: "Acquit MDB"
- BRA_acquit_pmdb_desc: "The Democratic Brazilian Moviment (MDB), formerly Party of Democratic Brazilian Moviment (PMDB), is a central Brazilian political party. PMDB is the biggest party in Brazil and has a huge influence in the congress, the Senate, the Supreme Cort and many other politic-related agencies. If we align with them we might have some benefits."
- BRA_acquit_workers_party: "Acquit Workers Party"
- BRA_acquit_workers_party_desc: "The Workers' Party (PT) is a left-wing political party in Brazil. Although PT doesn't have very much support from Centrão, they have a lot of popular support all over the country."
- BRA_the_new_elections: "The New Elections"
- BRA_the_new_elections_desc: "Elections. Tense times in Brazil. The people are very divided. With PSL, PT and PSDB in the elections, these are perhaps the most tense elections in the history of Brazil!"
- BRA_rw_populist: "Right-Wing Populism"
- BRA_rw_populist_desc: "After the arrests and mistakes of the Brazilian Left, people are looking towards the other side of the aisle and at parties such as PSL."
- BRA_pt_pmdb_coop: "PT-MDB Cooperation"
- BRA_pt_pmdb_coop_desc: "The MDB is a centrist party, which has a huge influence in the Centrão. For now, we are in bad relations with Centrão, but we can change that by seeking support from MDB."
- BRA_pt_hegemony: "PT Hegemony"
- BRA_pt_hegemony_desc: "Our party is already very popular in Brazil. We must make our influence absolute in our country!"
- BRA_rise_electoral_media: "Rise of Electoral Media"
- BRA_rise_electoral_media_desc: "Bolsonaro has huge support in social media, especially on Twitter. It is normal to see hashtags or people supporting the president."
- BRA_populist_wave: "Populist Wave"
- BRA_populist_wave_desc: "With Bolsonaro's Victory in Brazil, a huge populist wave has begun in Brazil. From the Acre to Rio Grande do Sul, Bolsonaro has huge support, all over the country."
- BRA_christian_democracy: "Christian Democracy"
- BRA_christian_democracy_desc: "Brazilians want to maintain traditional values, like Christian values. For this, we must establish a more Christian democracy."
- BRA_restoration_image: "Restore the Image"
- BRA_restoration_image_desc: "After the departure of Cardoso, it is time for his successors to rebuild and reimagine what the PSDB can be."
- BRA_underdog: "Underdog Effect"
- BRA_underdog_desc: "Being the underdog has the appeal to many that you fight not knowing if you win or not, but that you believe in something worth fighting for. Much like a cornered fox, we will march on."
- BRA_social_democracy: "Brazillian Social Democracy"
- BRA_social_democracy_desc: "Social democracy refers to a broad spectrum of left-wing ideologies espousing economic and social justice to a greater extent than most branches of liberalism. Social democrats seek to humanize capitalism to curb inequality, oppression, and foster democracy. Our people love the social democratic system. Let's adopt it."
- BRA_liberal_resurgence: "Liberal Resurgence"
- BRA_liberal_resurgence_desc: "Liberalism is a centrist ideology that promotes the rights of the individual and stresses freedom over the expansion of the state power. Liberals tend to support progressive social policies within the framework of a free market with free trade with the rest of the world. The Brazilian population becomes more and more liberal. We will become a liberal government, in favor of the people."
- BRA_electoral_upset: "Electoral Upset"
- BRA_electoral_upset_desc: "Time to make sure that PT never takes away our power from now on, as they did in the later years."
- BRA_reduce_debts: "Reduce Our Debt"
- BRA_reduce_debts_desc: "To increase the party's popularity and improve Brazil's economy, we need to reduce our foreign debt."
- BRA_expansive_spending: "Expansive Spending"
- BRA_expansive_spending_desc: "We can spend a large amount of money and improve our economy greatlyvthrough investing in industries."
- BRA_foreign_buyouts: "Seek Foreign Buy Outs"
- BRA_foreign_buyouts_desc: "We can gather support and spend a small amount of money to improve our economy."
- BRA_ciro_gomes: "Ciro Gomes Endorses Us"
- BRA_ciro_gomes_desc: "Ciro Ferreira Gomes, often known simply as Ciro, is a centre-left Brazilian politician, lawyer, and academic from the northeastern state of Ceará. Over the course of his career, Ciro has run for president three times, in 1998, 2002, and most recently 2018. Currently affiliated with the social democratic Democratic Labour Party (PDT), Ciro is offering support to us now."
- BRA_agrarian_reform: "Agrarian Reform"
- BRA_agrarian_reform_desc: "Agrarian Reform is a solution to a long-dated problem in Brazil, a very large number of lands in the hands of a very few people. It's time to end this."
- BRA_social_programs: "Social Programs"
- BRA_social_programs_desc: "Social Programs are the key to aiding our people."
- BRA_cardoso_legacy: "Cardoso's Legacy"
- BRA_cardoso_legacy_desc: "To become the greatest country, Brazil needs to follow the legacy of its former president, Fernando Henrique Cardoso, or FHC."
- BRA_psdb_pdt_coalition: "PSDB-PDT Coalition"
- BRA_psdb_pdt_coalition_desc: "PSDB has been a really social-democratic party in the last few years. If we align ourselves with other parties, such as PDT, we can fulfil all of our interests."
+ BRA_psl_growth: "L'essor du PSL"
+ BRA_psl_growth_desc: "Alors que la popularité de Bolsonaro augmente de plus en plus, son parti, le PSL, connaît également une croissance très rapide, encore plus à l'approche des élections."
+ BRA_acquit_pmdb: "Acquittement MDB"
+ BRA_acquit_pmdb_desc: "Le Mouvement Démocratique Brésilien (MDB), anciennement Parti du Mouvement Démocratique Brésilien (PMDB), est un parti politique central brésilien. Le PMDB est le plus grand parti du Brésil et a une énorme influence au Congrès, au Sénat, à la Cour suprême et dans de nombreux autres organismes liés à la politique. Si nous nous alignons sur eux, nous pourrions en tirer des avantages."
+ BRA_acquit_workers_party: "Acquittement du Parti des travailleurs"
+ BRA_acquit_workers_party_desc: "Le Parti des travailleurs (PT) est un parti politique de gauche au Brésil. Bien que le PT ne bénéficie pas d'un soutien important de la part du Centrão, il bénéficie d'un soutien populaire important dans tout le pays."
+ BRA_the_new_elections: "Les nouvelles élections"
+ BRA_the_new_elections_desc: "Elections. Le Brésil connaît des temps tendus. Le peuple est très divisé. Avec le PSL, le PT et le PSDB aux élections, ce sont peut-être les élections les plus tendues de l'histoire du Brésil !"
+ BRA_rw_populist: "Populisme de droite"
+ BRA_rw_populist_desc: "Après les arrestations et les erreurs de la gauche brésilienne, les gens regardent vers l’autre côté de l’échiquier politique et vers des partis comme le PSL."
+ BRA_pt_pmdb_coop: "Coopération PT-MDB"
+ BRA_pt_pmdb_coop_desc: "Le MDB est un parti centriste qui a une grande influence dans le Centrão. Pour l’instant, nous entretenons de mauvaises relations avec le Centrão, mais nous pouvons changer cela en recherchant le soutien du MDB."
+ BRA_pt_hegemony: "Hégémonie du PT"
+ BRA_pt_hegemony_desc: "Notre parti est déjà très populaire au Brésil. Nous devons accroître notre influence dans notre pays !"
+ BRA_rise_electoral_media: "L'essor des médias électoraux"
+ BRA_rise_electoral_media_desc: "Bolsonaro bénéficie d'un soutien massif sur les réseaux sociaux, notamment sur Twitter. Il est normal de voir des hashtags ou des personnes soutenant le président."
+ BRA_populist_wave: "Vague populiste"
+ BRA_populist_wave_desc: "Avec la victoire de Bolsonaro au Brésil, une vague populiste de grande ampleur a commencé. De l'Acre au Rio Grande do Sul, Bolsonaro bénéficie d'un soutien massif dans tout le pays."
+ BRA_christian_democracy: "Démocratie chrétienne"
+ BRA_christian_democracy_desc: "Les Brésiliens veulent conserver leurs valeurs traditionnelles, notamment chrétiennes. Pour cela, il faut établir une démocratie plus chrétienne."
+ BRA_restoration_image: "Restaurer l'image"
+ BRA_restoration_image_desc: "Après le départ de Cardoso, il est temps pour ses successeurs de reconstruire et de réimaginer ce que peut être le PSDB."
+ BRA_underdog: "Effet d'outsider"
+ BRA_underdog_desc: "Pour beaucoup, être l'outsider est un attrait, car on se bat sans savoir si on gagne ou non, mais on croit en quelque chose qui vaut la peine de se battre. Tel un renard acculé, nous continuerons à avancer."
+ BRA_social_democracy: "Démocratie sociale brésilienne"
+ BRA_social_democracy_desc: "La social-démocratie désigne un large spectre d’idéologies de gauche qui prônent la justice économique et sociale dans une plus large mesure que la plupart des branches du libéralisme. Les sociaux-démocrates cherchent à humaniser le capitalisme pour réduire les inégalités, l’oppression et favoriser la démocratie. Notre peuple aime le système social-démocrate. Adoptons-le."
+ BRA_liberal_resurgence: "La renaissance du Parti libéral"
+ BRA_liberal_resurgence_desc: "Le libéralisme est une idéologie centriste qui promeut les droits de l’individu et met l’accent sur la liberté plutôt que sur l’expansion du pouvoir de l’État. Les libéraux ont tendance à soutenir des politiques sociales progressistes dans le cadre d’un marché libre et du libre-échange avec le reste du monde. La population brésilienne devient de plus en plus libérale. Nous deviendrons un gouvernement libéral, en faveur du peuple."
+ BRA_electoral_upset: "Déroute électorale"
+ BRA_electoral_upset_desc: "Il est temps de veiller à ce que le PT ne nous prive plus jamais de notre pouvoir, comme il l’a fait au cours des dernières années."
+ BRA_reduce_debts: "Réduisons notre dette"
+ BRA_reduce_debts_desc: "Pour augmenter la popularité du parti et améliorer l’économie du Brésil, nous devons réduire notre dette extérieure."
+ BRA_expansive_spending: "Dépenses expansives"
+ BRA_expansive_spending_desc: "Nous pouvons dépenser beaucoup d’argent et améliorer considérablement notre économie en investissant dans les industries."
+ BRA_foreign_buyouts: "Rechercher des rachats étrangers"
+ BRA_foreign_buyouts_desc: "Nous pouvons rassembler du soutien et dépenser une petite somme d’argent pour améliorer notre économie."
+ BRA_ciro_gomes: "Ciro Gomes nous soutient"
+ BRA_ciro_gomes_desc: "Ciro Ferreira Gomes, souvent connu simplement sous le nom de Ciro, est un homme politique, avocat et universitaire brésilien de centre-gauche originaire de l'État du Ceará, dans le nord-est du pays. Au cours de sa carrière, Ciro s'est présenté à trois reprises à l'élection présidentielle, en 1998, 2002 et plus récemment en 2018. Actuellement affilié au Parti démocratique du travail (PDT), un parti social-démocrate, Ciro nous apporte son soutien dès maintenant."
+ BRA_agrarian_reform: "Réforme agraire"
+ BRA_agrarian_reform_desc: "La réforme agraire est une solution à un problème de longue date au Brésil : un très grand nombre de terres sont aux mains d'un nombre très restreint de personnes. Il est temps d'en finir."
+ BRA_social_programs: "Programmes sociaux"
+ BRA_social_programs_desc: "Les programmes sociaux sont la clé pour aider notre peuple."
+ BRA_cardoso_legacy: "L'héritage de Cardoso"
+ BRA_cardoso_legacy_desc: "Pour devenir le plus grand pays, le Brésil doit suivre l’héritage de son ancien président, Fernando Henrique Cardoso, ou FHC."
+ BRA_psdb_pdt_coalition: "Coalition PSDB-PDT"
+ BRA_psdb_pdt_coalition_desc: "Ces dernières années, le PSDB est devenu un parti social-démocrate. Si nous nous alignons sur d’autres partis, comme le PDT, nous pourrons satisfaire tous nos intérêts."
  BRA_rise_of_moderates: "Rise of Moderates"
  BRA_rise_of_moderates_desc: "Moderate politicians will now support our party."
  BRA_align_with_other_parties: "Create a New Coalition"
