--- a/localisation/french/MD_focus_CUB_l_french.yml
+++ b/localisation/french/MD_focus_CUB_l_french.yml
@@ -4,7 +4,6 @@
  raul_strenght_power_tt: "§GRaul renforcera sa position dans le parti§!"
  CUB_allow_elections_tt: "§GLes élections seront autorisées§!"
  CUB_allow_parties_tt: "§GNous autoriserons certains partis d'opposition§!"
- CUB_migel_comeback: "§YMigel Mario Diaz deviendra leader du Partido Comunista de Cuba§! §G(perspectives émergentes)§!"
  cuba_alba_tt: "Les décisions de l'ALBA s'ouvriront"
  CUB_start_democratic_venezuellas: "§!Nous allons lancer une révolution démocratique au Venezuela§!"
  CUB_has_updated_the_military_trigger_TT: "N'ayez pas d'esprit national §ROForce militaire obsolète§!"
@@ -1101,3 +1100,4 @@
  cuba.74.a: "Sad."
  CUB_russian_bases: "Russian Bases on Cuba"
  CUB_russian_bases_desc: "Since the U.S. won't talk to us, they will now talk to the Russian armed forces."
+ CUB_miguel_comeback: "§YMiguel Mario Diaz deviendra leader du Partido Comunista de Cuba§! §G(perspectives émergentes)§!"
