--- a/localisation/french/MD_focus_EU_l_french.yml
+++ b/localisation/french/MD_focus_EU_l_french.yml
@@ -728,10 +728,10 @@
  EU_voting_mission_focus_EU611_QMV_result_desc: "The member states have voted on Internal Enlargement. Time to show the result."
  EUvote.1.t: "EU Parliament Vote Started"
  EUvote.1.d: "The EU Parliament has brought a measure up for vote! Check the Parliament section of the EU to help review or pass the measure."
- EUvote.1.a: "To the Polls!"
+ EUvote.1.a: "Aux urnes !"
  EUvote.2.t: "EU Council Vote Started"
  EUvote.2.d: "The EU Council has started to vote on a new law! Check the Euro Voting section to place your vote, and influence other nations!"
- EUvote.2.a: "To the Polls!"
+ EUvote.2.a: "Aux urnes !"
  EUevent.2.t: "EU-Turkey deal"
  EUevent.2.d: "§C[EUU.GetFlag] The European Union§! and [TUR.GetNameWithFlag] reached an agreement aimed at stopping the flow of irregular migration from Turkey to Europe. According to the EU-Turkey Statement, all new irregular migrants and asylum seekers arriving from Turkey to the Greek islands and whose applications for asylum have been declared inadmissible should be returned to Turkey. §C[EUU.GetFlag] The European Union§! will pay 3 billion Euro for the Facility for Refugees in Turkey."
  EUevent.2.a: "D'accord"
@@ -3137,7 +3137,7 @@
  council_vote_button_delayed_tt: "[current_active_vote_desc]"
  EUevent.21.t: "An Office is Open"
  EUevent.21.d: "A seat has now become vacant either from retiring an office or from the seat term being complete. The office will remain vacant from the AI for the next fourteen days, from there the AI will seek to occupy the seat. Please refer to the European Union Office screen."
- EUevent.21.a: "Thanks for the Tip!"
+ EUevent.21.a: "Merci pour le conseil !"
  HLS_Article_50_YES: "§Y[HLS.GetNameWithFlag]§!\n"
  SMA_Article_50_YES: "§Y[SMA.GetNameWithFlag]§!\n"
  MNC_Article_50_YES: "§Y[MNC.GetNameWithFlag]§!\n"
@@ -3327,10 +3327,11 @@
  Migrant_Crisis_Europe_desc: "La crise des migrants a frappé l’Europe comme un marteau, sapant à la fois l’unité nationale et la popularité des partis au pouvoir. La guerre en Syrie a poussé des milliers de réfugiés à fuir vers les pays voisins et, bien que l'Europe soit prête à accueillir ceux qui souffrent de la guerre, le nombre de migrants nouveaux et permanents venus de toute l'Afrique du Nord et du Moyen-Orient a submergé les institutions et les institutions européennes. beaucoup en voulaient aux nouveaux arrivants."
  eu_candidates_considering: "Le §YConseil européen§! n’étudie actuellement aucun candidat à l’UE"
  eu_candidates_tt: "Nécessite que les candidats à l’Union européenne existent"
- eu_voting_minor_popup_tt: "If you wish to no longer receive these notifications, you can deselect minor popups in your decisions menu. NOTE: This will also hide other events. Not specifically European Union popups regarding voting or when the council or parliament are ready for session."
- EUvote.3.t: "EU Parliament is Ready for Session"
- EUvote.3.d: "The European Parliament is ready for session. You can choose to propose something to the European Parliament or the AI will propose a bill to session in two weeks."
- EUvote.3.a: "To the Polls!"
- EUvote.4.t: "EU Council Vote is Ready for Session"
- EUvote.4.d: "The European Council is ready for session. You can choose to propose something to the European Council or the AI will propose a bill to session in two weeks."
- EUvote.4.a: "To the Polls!"
+ eu_voting_minor_popup_tt: "Si vous ne souhaitez plus recevoir ces notifications, vous pouvez désélectionner les fenêtres contextuelles mineures dans votre menu de décisions. REMARQUE : cela masquera également d'autres événements. Pas spécifiquement les fenêtres contextuelles de l'Union européenne concernant le vote ou la date à laquelle le conseil ou le parlement sont prêts à se réunir."
+ EUvote.3.t: "Le Parlement européen est prêt pour la session"
+ EUvote.3.d: "Le Parlement européen est prêt à siéger. Vous pouvez choisir de proposer quelque chose au Parlement européen ou l'IA proposera un projet de loi à la session dans deux semaines."
+ EUvote.3.a: "Aux urnes !"
+ EUvote.4.t: "Le vote du Conseil de l'UE est prêt pour la session"
+ EUvote.4.d: "Le Conseil européen est prêt à siéger. Vous pouvez choisir de proposer quelque chose au Conseil européen ou l'IA proposera un projet de loi à la session dans deux semaines."
+ EUvote.4.a: "Aux urnes !"
+ EU_level_of_breaches_less_than_3_tt: "Le niveau de violation des valeurs de l'Union européenne est §Yinférieur à§! 3(Violations actuelles: [?THIS.breach_of_EU_value|0R])\n"
