--- a/localisation/french/MD_focus_GEO_l_french.yml
+++ b/localisation/french/MD_focus_GEO_l_french.yml
@@ -889,14 +889,14 @@
  GEO_money_navyusa: "US Navy Partnership Program"
  GEO_patrol_cather: "Georgian Coastal Guard"
  geo_misc.3.t: "Georgia proposes non-aggression pact"
- geo_misc.3.d: "Georgia wants to achieve strong peace in the region by not having a pact signed by both of our countries."
+ geo_misc.3.d: "Georgia wants to achieve strong peace in the region by having a pact signed by both of our countries."
  geo_misc.3.a: "Good idea!"
  geo_misc.3.b: "Jamais"
  geo_misc.4.t: "Russia Denies"
  geo_misc.4.d: "Russia will not sign a pact with us."
  geo_misc.4.a: "triste"
  geo_misc.5.t: "Georgia proposes non-aggression pact"
- geo_misc.5.d: "Georgia wants to achieve strong peace in the region by not having a pact signed by both of our countries."
+ geo_misc.5.d: "Georgia wants to achieve strong peace in the region by having a pact signed by both of our countries."
  geo_misc.5.a: "Good idea!"
  geo_misc.5.b: "Jamais"
  geo_misc.5.c: "Jamais"
