--- a/localisation/polish/MD_custom_achievements_l_polish.yml
+++ b/localisation/polish/MD_custom_achievements_l_polish.yml
@@ -137,59 +137,59 @@
  form_canzuk_DESC: "Utwórz CANZUK jako Australia, Kanada, Nowa Zelandia lub Wielka Brytania."
  form_antillean_confederation_NAME: "Utwórz Konfederację Antyli"
  form_antillean_confederation_DESC: "Utwórz Konfederację Antyli jako Republika Dominikany, Haiti, Portoryko lub Kuba."
- form_rio_de_la_plata_NAME: "Formularz Rio de la Plata"
- form_rio_de_la_plata_DESC: "Z Rio de la Plata wybierz się do Paragwaju, Boliwii, Chile, Urugwaju lub Argentyny."
+ form_rio_de_la_plata_NAME: "Utwórz Rio de la Plata"
+ form_rio_de_la_plata_DESC: "Utwórz Rio de la Plata jako Paragwaj, Boliwia, Chile, Urugwaj lub Argentyna."
  form_north_sea_empire_NAME: "Utwórz Imperium Morza Północnego"
- form_north_sea_empire_DESC: "Utwórz Imperium Morza Północnego jako Wielką Brytanię, Szwecję, Danię lub Norwegię."
+ form_north_sea_empire_DESC: "Utwórz Imperium Morza Północnego jako Wielka Brytania, Szwecja, Dania lub Norwegia."
  form_the_visegrad_union_NAME: "Utwórz Grupę Wyszehradzką"
- form_the_visegrad_union_DESC: "Stwórz Grupę Wyszehradzką jako Polska, Czechy, Słowacja czy Węgry."
+ form_the_visegrad_union_DESC: "Stwórz Grupę Wyszehradzką jako Polska, Czechy, Słowacja lub Węgry."
  form_the_andean_federation_NAME: "Utwórz Federację Andyjską"
  form_the_andean_federation_DESC: "Utwórz Federację Andyjską jako Kolumbia, Peru lub Boliwia."
- form_indochina_NAME: "Tworzą Indochiny"
- form_indochina_DESC: "Utwórz Indochiny jako Wietnam, Kambodżę lub Laos."
- form_the_united_turkic_territories_NAME: "Utwórz Zjednoczone Terytoria Tureckie"
- form_the_united_turkic_territories_DESC: "Utwórz Zjednoczone Terytoria Tureckie jako Kazachstan, Uzbekistan, Turkmenistan, Tadżykistan lub Kirgistan."
- form_the_union_of_south_american_nations_NAME: "Utworzyć Unię Narodów Ameryki Południowej"
+ form_indochina_NAME: "Utwórz Indochiny"
+ form_indochina_DESC: "Utwórz Indochiny jako Wietnam, Kambodża lub Laos."
+ form_the_united_turkic_territories_NAME: "Utwórz Zjednoczone Terytoria Turkickie"
+ form_the_united_turkic_territories_DESC: "Utwórz Zjednoczone Terytoria Turkickie jako Kazachstan, Uzbekistan, Turkmenistan, Tadżykistan lub Kirgistan."
+ form_the_union_of_south_american_nations_NAME: "Utwórz Unię Narodów Ameryki Południowej"
  form_the_union_of_south_american_nations_DESC: "Utwórz Unię Narodów Ameryki Południowej jako Brazylia, Wenezuela, Argentyna, Peru, Ekwador, Gujana, Kolumbia, Chile, Trynidad i Tobago lub Gujana Francuska."
- form_australasia_NAME: "Tworzą Australazję"
- form_australasia_DESC: "Utwórz Australazję jako Australię lub Nową Zelandię."
- form_iberia_NAME: "Z Iberii"
- form_iberia_DESC: "Utwórz Iberię jako Hiszpanię lub Portugalię"
- form_gran_colombia_NAME: "Tworzą Gran Kolumbię"
- form_gran_colombia_DESC: "Utwórz Gran Colombia jako Kolumbię, Wenezuelę lub Ekwador."
- form_central_america_NAME: "Tworzą Amerykę Środkową"
- form_central_america_DESC: "Z Ameryki Środkowej, jak Belize, Gwatemela, Salwador, Honduras, Nikaragua, Kostaryka czy Panama."
- form_the_baltic_states_NAME: "Tworzą państwa bałtyckie"
- form_the_baltic_states_DESC: "Utwórz państwa bałtyckie jako Estonię, Łotwę lub Litwę."
- unite_the_nordic_people_NAME: "Forma Skandynawii"
- unite_the_nordic_people_DESC: "Tworzą Skandynawię jak Szwecja, Dania, Norwegia czy Finlandia."
+ form_australasia_NAME: "Utwórz Australazję"
+ form_australasia_DESC: "Utwórz Australazję jako Australia lub Nowa Zelandia."
+ form_iberia_NAME: "Utwórz Iberię"
+ form_iberia_DESC: "Utwórz Iberię jako Hiszpania lub Portugalia"
+ form_gran_colombia_NAME: "Utwórz Wielką Kolumbię"
+ form_gran_colombia_DESC: "Utwórz Wielką Kolumbię jako Kolumbia, Wenezuela lub Ekwador."
+ form_central_america_NAME: "Utwórz Amerykę Środkową"
+ form_central_america_DESC: "Utwórz Amerykę Środkową jako Belize, Gwatemela, Salwador, Honduras, Nikaragua, Kostaryka lub Panama."
+ form_the_baltic_states_NAME: "Utwórz państwa bałtyckie"
+ form_the_baltic_states_DESC: "Utwórz państwa bałtyckie jako Estonia, Łotwa lub Litwa."
+ unite_the_nordic_people_NAME: "Utwórz Skandynawię"
+ unite_the_nordic_people_DESC: "Utwórz Skandynawię jako Szwecja, Dania, Norwegia lub Finlandia."
  chiraq_NAME: "Chirak"
- chiraq_DESC: "Gdy Irak przejmuje kontrolę nad Illinois (Chiraq)"
- u_ar_great_NAME: "U AR Świetnie"
+ chiraq_DESC: "Jako Irak, przejmij kontrolę nad Illinois (Chirak)"
+ u_ar_great_NAME: "Tyś Jest Wielki"
  u_ar_great_DESC: "Zjednocz Zjednoczoną Republikę Arabską lub Federację Republik Arabskich"
  lawrence_of_arabia_NAME: "Lawrence z Arabii"
  lawrence_of_arabia_DESC: "Jako Wielka Brytania wyślij wolontariuszy do Zjednoczonej Republiki Arabskiej lub Federacji Republik Arabskich"
  technically_everyone_is_an_arab_NAME: "Tak naprawdę każdy spoza Ameryki jest formalnie Arabem"
  technically_everyone_is_an_arab_DESC: "Jako Zjednoczona Republika Arabska lub Federacja Republik Arabskich bądź jedynym istniejącym krajem oprócz Stanów Zjednoczonych"
  are_you_sure_thats_enough_NAME: "Czy jesteś pewien, że to wystarczy?"
- are_you_sure_thats_enough_DESC: "Kontrolować co najmniej 90% arabskiego PKB przed zjednoczeniem Arabów"
+ are_you_sure_thats_enough_DESC: "Kontroluj co najmniej 90% arabskiego PKB przed zjednoczeniem Arabów"
  i_hate_arabs_NAME: "Ale w interesie pełnego ujawnienia muszę powiedzieć, że nienawidzę Arabów"
  i_hate_arabs_DESC: "Pokonaj Zjednoczoną Republikę Arabską lub Federację Republik Arabskich w wojnie"
  its_all_francafrique_to_me_NAME: "To wszystko jest dla mnie Françafrique"
- its_all_francafrique_to_me_DESC: "Tak jak Francja ma całą Afrykę pod swoją kontrolą"
+ its_all_francafrique_to_me_DESC: "Jako Francja, posiadaj całą Afrykę pod swoją kontrolą"
  the_return_to_charlesfort_st_louis_NAME: "Powrót do Charlesfort i Ft. Saint Louis"
- the_return_to_charlesfort_st_louis_DESC: "Jako monarchista Bourbon Francja okupuje Karolinę Południową i Teksas"
- truly_better_than_napoleon_NAME: "Naprawdę lepszy od Napoleona"
+ the_return_to_charlesfort_st_louis_DESC: "Jako monarchistyczna Francja Bourbonów, okupuje Karolinę Południową i Teksas"
+ truly_better_than_napoleon_NAME: "Napoleon się przy tym chowa"
  truly_better_than_napoleon_DESC: "Przed rokiem 2010 miej pod swoją kontrolą Londyn, Moskwę, Sztokholm, Stambuł, Rzym, Madryt, Kair i Tunis"
  ils_sont_le_fleau_des_gens_occupes_NAME: "Są zmorą zapracowanych ludzi"
- ils_sont_le_fleau_des_gens_occupes_DESC: "Gdy Francja stanie się jedyną superpotęgą"
+ ils_sont_le_fleau_des_gens_occupes_DESC: "Jako Francja, zostań jedyną superpotęgą"
  he_who_has_iron_has_bread_NAME: "Kto ma żelazo, ma chleb."
- he_who_has_iron_has_bread_DESC: "Ponieważ komunistyczna Francja ma maksymalne wydatki na wszystkie prawa z wyjątkiem policji i wojska, a wszystkie istniejące kraje w Europie również są komunistyczne i podlegają Francji."
- eu_achievement_tt: "Jest obecnym lub potencjalnym @EUU §YUnia Europejska§! naród"
+ he_who_has_iron_has_bread_DESC: "Jako komunistyczna Francja, posiadaj maksymalne wydatki na wszystkie prawa z wyjątkiem policji i wojska, a wszystkie istniejące kraje w Europie również są komunistyczne i podlegają Francji."
+ eu_achievement_tt: "Jest obecnym lub potencjalnym narodem @EUU §YUnii Europejskiej§!"
  ace_western_autocracy_are_in_power_tt: "§Y$generic.Western_Autocracy$§! są u władzy."
  ace_communist_state_are_in_power_tt: "§Y$generic.Communist-State$§! są u władzy."
  ace_neutral_oligarchs_are_in_power_tt: "§Y$generic.oligarchism$§! są u władzy."
- ace_neutral_communism_are_in_power_tt: "§YOligarchs§! są u władzy."
+ ace_neutral_communism_are_in_power_tt: "§YOligarchowie§! są u władzy."
  ace_fascists_are_in_power_tt: "§Y$generic.Nat_Fascism$§! są u władzy."
  ace_military_junta_are_in_power_tt: "§Y$generic.Nat_Autocracy$§! są u władzy."
  ace_monarchist_are_in_power_tt: "§Y$generic.Monarchist$§! są u władzy."
@@ -197,23 +197,23 @@
  ace_fascists_are_in_power_or_coalition_tt: "§Y$generic.Nat_Fascism$§! są w koalicji rządzącej."
  africa_paradis_NAME: "Africa Paradis"
  africa_paradis_DESC: "Jako afrykański kraj, utwórz Stany Zjednoczone Afryki i miej wyższe PKB niż jakikolwiek europejski kraj"
- africa_paradis_usa_tt: "Utworzył Stany Zjednoczone Afryki "
- africa_paradis_gdp_tt: "Nasze GDP wyższe niż jakikolwiek europejski kraj"
+ africa_paradis_usa_tt: "Utworzono Stany Zjednoczone Afryki "
+ africa_paradis_gdp_tt: "Nasze GDP jest wyższe niż jakikolwiek europejski kraj"
  libya_order_of_republic_NAME: "Libijski Order Republiki"
  libya_order_of_republic_DESC: "Nagroda przyznawana głowom państw; Wypełnij swoją służbę dla Libii, grając do 2020 roku.\n\n\"Na całej planecie nie ma innego demokratycznego państwa poza Libią\".\n\n- Muammar Kaddafi"
  libya_order_of_jihad_NAME: "Libijski Zakon Dżihadu"
- libya_order_of_jihad_DESC: "Przyznawane za wkład w dobrobyt Libii; Posiadając PKB/capita wyższy niż 50 tys. jako Libia.\n\n\"Jeśli Libia odzyska siły, wieżowce w Zjednoczonych Emiratach Arabskich zamienią się w gniazda gołębi\".\n\n- Khaled al-Mishri"
+ libya_order_of_jihad_DESC: "Przyznawane za wkład w dobrobyt Libii; Posiadaj PKB/capita wyższy niż 50 tys. jako Libia.\n\n\"Jeśli Libia odzyska siły, wieżowce w Zjednoczonych Emiratach Arabskich zamienią się w gniazda gołębi\".\n\n- Khaled al-Mishri"
  libya_order_of_grand_conqueror_NAME: "Libijski Order Wielkiego Zdobywcy"
  libya_order_of_grand_conqueror_DESC: "Przyznawany odwiedzającym dygnitarzom; Sprzymierz się z supermocarstwem lub wielkim mocarstwem.\n\n\"Jestem zainteresowany Libią tylko wtedy, gdy zatrzymamy ropę. Jeśli nie zatrzymamy ropy, nie jestem zainteresowany\".\n\n- Donald Trump"
  libya_medal_of_merit_NAME: "Libijski Order Zasługi Wojskowej"
  libya_medal_of_merit_DESC: "Nagroda za sprawność wojskową; odwrócenie historii i wygranie wojny z Egiptem i Czadem.\n\n\"Nie poddamy się ponownie; nie jesteśmy kobietami; będziemy dalej walczyć\".\n\n- Muammar Kaddafi"
  libya_good_gaddafi_NAME: "Kaddafi? Raczej Gooddafi"
- libya_good_gaddafi_DESC: "Jako Kaddafi rządzić demokratyczną Libią."
+ libya_good_gaddafi_DESC: "Jako Kaddafi, panuj nad demokratyczną Libią."
  libya_bad_gaddafi_NAME: "Kaddafi? Raczej Baddafi"
- libya_bad_gaddafi_DESC: "Jako Kaddafi, rozmontować Libię."
+ libya_bad_gaddafi_DESC: "Jako Kaddafi, rozbierz Libię."
  libya_no_gods_or_kings_NAME: "Żadnych bogów ani królów. Tylko człowiek"
  libya_no_gods_or_kings_DESC: "Jako Muammar Kaddafi, wybierz coś innego. Wybierz niemożliwe. Wybierz zachwyt."
- libya_no_gods_or_kings_tt: "Muammar Kaddafi odrzucił §YTrzy odpowiedzi§!"
+ libya_no_gods_or_kings_tt: "Muammar Kaddafi odrzucił §Ytrzy odpowiedzi§!"
  libya_f_is_for_family_NAME: "R jak Rodzina"
  libya_f_is_for_family_DESC: "Jako Muammar Kaddafi, niech wszystkie twoje dzieci zginą lub zostaną wygnane."
  libya_f_is_for_family_muhammad_muammar_gaddafi_tt: "Muhammad Muammar Kaddafi nie żyje lub został wygnany"
@@ -224,8 +224,8 @@
  libya_f_is_for_family_ayesha_gaddafi_tt: "Ayesha Kaddafi nie żyje lub została wygnana"
  libya_f_is_for_family_saif_al_arab_gaddafi_tt: "Saif al-Arab Kaddafi nie żyje lub został wygnany"
  libya_f_is_for_family_khamis_gaddafi_tt: "Chamis Kaddafi nie żyje lub został wygnany"
- libya_t_posing_NAME: "Pozowanie w kształcie litery T"
- libya_t_posing_DESC: "Podobnie jak Libia, mają Tibesti i państwo Tuaregów jako poddanych, podczas gdy są właścicielami wszystkich swoich głównych państw."
+ libya_t_posing_NAME: "T-Posing"
+ libya_t_posing_DESC: "Jako Libia, posiadaj Tibesti i państwo Tuaregów jako poddanych, podczas gdy są właścicielami wszystkich swoich głównych stanów."
  libya_t_posing_TIE_tt: "[TIE.GetNameWithFlag] posiada wszystkie swoje podstawowe regiony"
  libya_t_posing_TUA_tt: "[TUA.GetNameWithFlag] posiada wszystkie swoje podstawowe regiony"
  botswana_naledi_ya_botswana_NAME: "Gwiazda Botswany"
