--- a/localisation/polish/MD_focus_BRA_l_polish.yml
+++ b/localisation/polish/MD_focus_BRA_l_polish.yml
@@ -49,7 +49,7 @@
  BRA_encourage_consumption: "Zachęcaj do konsumpcji"
  BRA_encourage_consumption_desc: "Zachęcając do konsumpcji wśród naszego społeczeństwa, możemy stymulować wzrost gospodarczy w kierunku bardziej nowoczesnej gospodarki konsumenckiej."
  BRA_national_developmentalism: "Narodowy rozwój"
- BRA_national_developmentalism_desc: "Narodowy rozwój umożliwił Brazylii industrializację i szybki rozwój. Nie należało porzucać tej polityki rozwojowej i musimy pracować nad jej ponownym wdrożeniem."
+ BRA_national_developmentalism_desc: "Narodowy Developmentalizm umożliwił Brazylii industrializację i szybki rozwój. Te polityki rozwojowe nie powinny zostać porzucone i musimy pracować nad ich wdrożeniem."
  BRA_social_programs_agenda_lula: "Agenda Programów Społecznych"
  BRA_social_programs_agenda_lula_desc: "Lula, podobnie jak cała Partia Robotnicza, popierają silne państwo, które jest w stanie zaspokoić zapotrzebowanie ludzi na godne życie. Aby zrealizować program partii, musimy stworzyć nowe programy społeczne."
  BRA_expand_social_benefits: "Rozwiń świadczenia społeczne"
@@ -545,7 +545,7 @@
  BRA_restoration_image_desc: "Po odejściu Cardoso nadszedł czas, aby jego następcy odbudowali i na nowo przemyśleli, czym może być PSDB."
  BRA_underdog: "Efekt słabszego"
  BRA_underdog_desc: "Bycie słabszym jest dla wielu atrakcyjne: walczysz, nie wiedząc, czy wygrasz, czy nie, ale wierzysz w coś, o co warto walczyć. Podobnie jak lis osaczony, będziemy maszerować dalej."
- BRA_social_democracy: "Brazylijska socjaldemokracja"
+ BRA_social_democracy: "Brazylijska Socjaldemokracja"
  BRA_social_democracy_desc: "Socjaldemokracja odnosi się do szerokiego spektrum lewicowych ideologii opowiadających się za sprawiedliwością gospodarczą i społeczną w większym stopniu niż większość gałęzi liberalizmu. Socjaldemokraci starają się humanizować kapitalizm, aby ograniczyć nierówności, ucisk i wspierać demokrację. Nasi ludzie kochają system socjaldemokratyczny. Zaadoptujmy to."
  BRA_liberal_resurgence: "Liberalne odrodzenie"
  BRA_liberal_resurgence_desc: "Liberalizm jest ideologią centrową, która promuje prawa jednostki i kładzie nacisk na wolność ponad ekspansję władzy państwowej. Liberałowie mają tendencję do wspierania postępowej polityki społecznej w ramach wolnego rynku i wolnego handlu z resztą świata. Populacja Brazylii staje się coraz bardziej liberalna. Staniemy się rządem liberalnym, korzystnym dla ludzi."
@@ -554,7 +554,7 @@
  BRA_reduce_debts: "Zmniejsz nasze zadłużenie"
  BRA_reduce_debts_desc: "Aby zwiększyć popularność partii i poprawić gospodarkę Brazylii, musimy zmniejszyć nasze zadłużenie zagraniczne."
  BRA_expansive_spending: "Ekspansywne wydatki"
- BRA_expansive_spending_desc: "Możemy wydać duże sumy pieniędzy i znacznie ulepszyć naszą gospodarkę poprzez inwestycje w gałęzie przemysłu."
+ BRA_expansive_spending_desc: "Możemy wydać duże sumy pieniędzy i znacznie poprawić sytuację gospodarczą poprzez inwestowanie w przemysł."
  BRA_foreign_buyouts: "Szukaj zagranicznych wykupów"
  BRA_foreign_buyouts_desc: "Możemy zebrać wsparcie i wydać niewielką sumę pieniędzy na poprawę naszej gospodarki."
  BRA_ciro_gomes: "Ciro Gomes nas wspiera"
