--- a/localisation/polish/MD_focus_CUB_l_polish.yml
+++ b/localisation/polish/MD_focus_CUB_l_polish.yml
@@ -4,7 +4,6 @@
  raul_strenght_power_tt: "§GRAul wzmocni swoją pozycję w partii§!"
  CUB_allow_elections_tt: "§GWybory będą dozwolone§!"
  CUB_allow_parties_tt: "§GDopuścimy niektóre partie opozycyjne§!"
- CUB_migel_comeback: "§YMigel Mario Diaz zostanie przywódcą Partidokomunistycznej Kuby§! §G(wyłaniające się perspektywy)§!"
  cuba_alba_tt: "Otworzy decyzje ALBA"
  CUB_start_democratic_venezuellas: "§!Rozpoczniemy demokratyczną rewolucję w Wenezueli§!"
  CUB_has_updated_the_military_trigger_TT: "Nie masz ducha narodowego §ROPrzestarzałe Siły Zbrojne§!"
@@ -1101,3 +1100,4 @@
  cuba.68.t: "USA odmówiły"
  cuba.68.d: "Blokada nadal trwa..."
  cuba.68.a: "Oh..."
+ CUB_miguel_comeback: "§YMiguel Mario Diaz zostanie przywódcą Partidokomunistycznej Kuby§! §G(wyłaniające się perspektywy)§!"
