--- a/localisation/polish/MD_focus_EU_l_polish.yml
+++ b/localisation/polish/MD_focus_EU_l_polish.yml
@@ -3334,3 +3334,4 @@
  EUvote.4.t: "Głosowanie w Radzie UE jest gotowe na sesję"
  EUvote.4.d: "Rada Europejska jest gotowa do sesji. Możesz wybrać, aby zaproponować coś Radzie Europejskiej lub AI zaproponuje projekt ustawy na sesję za dwa tygodnie."
  EUvote.4.a: "Do ankiet!"
+ EU_level_of_breaches_less_than_3_tt: "Poziom naruszenia wartości Unii Europejskiej jest §Ymniejszy niż§! 3(Obecne naruszenia: [?THIS.breach_of_EU_value|0R])\n"
