--- a/localisation/polish/MD_focus_GEO_l_polish.yml
+++ b/localisation/polish/MD_focus_GEO_l_polish.yml
@@ -889,14 +889,14 @@
  GEO_money_navyusa: "Program Partnerstwa Marynarki Wojennej Stanów Zjednoczonych"
  GEO_patrol_cather: "Gruzińska Straż Przybrzeżna"
  geo_misc.3.t: "Gruzja proponuje pakt o nieagresji"
- geo_misc.3.d: "Gruzja chce osiągnąć silny pokój w regionie poprzez brak podpisania paktu przez oba nasze kraje."
+ geo_misc.3.d: "Gruzja chce osiągnąć trwały pokój w regionie poprzez podpisanie układu przez oba nasze kraje."
  geo_misc.3.a: "Dobry pomysł!"
  geo_misc.3.b: "Nigdy"
  geo_misc.4.t: "Rosja zaprzecza"
  geo_misc.4.d: "Rosja nie podpisze z nami paktu."
  geo_misc.4.a: "Smutny"
  geo_misc.5.t: "Gruzja proponuje pakt o nieagresji"
- geo_misc.5.d: "Gruzja chce osiągnąć silny pokój w regionie poprzez brak podpisania paktu przez oba nasze kraje."
+ geo_misc.5.d: "Gruzja chce osiągnąć trwały pokój w regionie poprzez podpisanie układu przez oba nasze kraje."
  geo_misc.5.a: "Dobry pomysł!"
  geo_misc.5.b: "Nigdy"
  geo_misc.5.c: "Nigdy"
