--- a/localisation/polish/MD_focus_RAJ_l_polish.yml
+++ b/localisation/polish/MD_focus_RAJ_l_polish.yml
@@ -233,7 +233,7 @@
  RAJ_BRICS_as_polit_alliance_desc: "Zjednoczeni w naszych celach zrównoważonej dynamiki sił globalnych, sformułowanie Paktu Obronnego BRICS jest naturalnym postępem. Pakt ten zapewni wzajemną pomoc obronną, cementując więź między państwami członkowskimi i zapewniając zbiorowe bezpieczeństwo przed zagrożeniami zewnętrznymi."
  RAJ_new_development_bank: "Nowy Bank Rozwoju"
  RAJ_new_development_bank_desc: "Nowy Bank Rozwoju powinien stać się podstawą integracji BRICS i poprawy relacji pomiędzy państwami członkowskimi."
- RAJ_recognition_tibet_as_china: "Uznanie Tybetu za Chiny"
+ RAJ_recognition_tibet_as_china: "Uznanie Tybetu za część Chin"
  RAJ_recognition_tibet_as_china_desc: "Rząd Indii wkrótce po uzyskaniu przez Indie niepodległości w 1947 r. potraktował Tybet jako de facto niepodległy kraj. Jednak ostatnio w indyjskiej polityce wobec Tybetu uwzględniono chińską wrażliwość i uznano Tybet za część Chin."
  RAJ_national_highway_project: "Projekt autostrady krajowej"
  RAJ_national_highway_project_desc: "Projekt rozwoju autostrad krajowych to projekt czterech pasów istniejących dróg krajowych i sześciu pasów wybranych głównych dróg krajowych w Indiach. Projekt rozpoczął się w 1998 roku pod przewodnictwem premiera Atala Bihari Vajpayee. Drogi krajowe stanowią jedynie około 2% całkowitej długości dróg, ale obsługują około 40% całkowitego ruchu na całej długości i szerokości kraju."
@@ -1820,7 +1820,6 @@
  indian_event.58.a: "Fuj!"
  RAJ_true_market: "Właściwy Rynek"
  RAJ_balancing_approach_idea: "Podejście równoważące"
- RAJ_decommdify_the_basics_idea: "Odrzuć podstawy"
  RAJ_a_rising_power_idea: "Wschodząca siła"
  RAJ_a_rising_power_idea_desc: "Indie cieszą się coraz większą popularnością na świecie, a w miarę jak stajemy się silniejsi na arenie międzynarodowej, czujne oko innych narodów nadal się na nie patrzy."
  RAJ_pro_lgbtqa_stance_idea: "Postawa pro-LGBTQIA"
@@ -1837,3 +1836,4 @@
  RAJ_Local_markets: "Indyjski handel lokalny"
  RAJ_focus_mao_pol_below_ten_TT: "§YWpływy polityczne maoistów są poniżej 10§!"
  RAJ_focus_mao_str_below_ten_TT: "§YSiła militarna maoistów jest poniżej 10§!"
+ RAJ_decommodify_the_basics_idea: "Dekomodyfikuj podstawy"
