--- a/localisation/polish/MD_focus_SPR_l_polish.yml
+++ b/localisation/polish/MD_focus_SPR_l_polish.yml
@@ -1807,8 +1807,6 @@
  SPR_end_the_loophole_idea_desc: "Wyeliminowanie luk podatkowych przewidzianych w naszym kodeksie podatkowym pomoże zrównoważyć obciążenia podatkowe naszych najbiedniejszych obywateli i zrzucić je na barki bogatych."
  SPR_keynesian_economic_idea: "Keynesowska polityka gospodarcza"
  SPR_keynesian_economic_idea_desc: "Przejście od modelu ekonomicznego monetaryzmu do teorii keynesowskiej może przyczynić się do ożywienia wzrostu gospodarczego Hiszpanii. Ceny są z natury sztywne, dlatego powinniśmy utrzymać rolę rządu w gospodarce."
- SPR_decommdify_the_basics_idea: "Odrzuć podstawy"
- SPR_decommdify_the_basics_idea_desc: "Podstawy nie powinny być traktowane jako towar. To podstawa i tak należy ją traktować."
  SPR_collectiveness_egalitarianism_idea: "Zbiorowy egalitaryzm"
  SPR_collectiveness_egalitarianism_idea_desc: "Zapewnienie potrzeb każdej osoby i zapewnienie jej wystarczających możliwości gwarantuje, że kolektyw pozostanie silny i zamożny."
  SPR_libertad_idea: "Libertad"
@@ -1848,3 +1846,5 @@
  galicians_loc: "Galegos (Galicjanie)"
  andalucians_loc: "Andaluzja (Andaluzjanie)"
  canarians_loc: "Kanaryjczycy (Kanaryjczycy)"
+ SPR_decommodify_the_basics_idea: "Dekomodyfikuj podstawy"
+ SPR_decommodify_the_basics_idea_desc: "Podstawy nie powinny być uważane za towar. Są podstawą i powinny być traktowane jako takie."
