--- a/localisation/russian/MD_focus_CUB_l_russian.yml
+++ b/localisation/russian/MD_focus_CUB_l_russian.yml
@@ -4,7 +4,6 @@
  raul_strenght_power_tt: "§GРауль укрепит свое положение в партии§!"
  CUB_allow_elections_tt: "§GВыборы будут разрешены§!"
  CUB_allow_parties_tt: "§GМы легализуем деятельность нескольких оппозиционных партий§!"
- CUB_migel_comeback: "§YМигель Марио Диас станет лидером Коммунистической партии Кубы§! §G(реакционная идеология)§!"
  cuba_alba_tt: "Откроет решения АЛБА"
  CUB_start_democratic_venezuellas: "§!Мы начнем демократическую революцию в Венесуэле§!"
  CUB_has_updated_the_military_trigger_TT: "Не имеют национального духа §RУстаревшие вооруженные силы§!"
@@ -1101,3 +1100,4 @@
  cuba.74.a: "Грустно"
  CUB_russian_bases: "Российские базы на Кубе"
  CUB_russian_bases_desc: "Поскольку США не будут разговаривать с нами, теперь они будут разговаривать с российскими вооруженными силами."
+ CUB_miguel_comeback: "§YМиге́ль Марио Диас станет лидером Коммунистической партии Кубы§! §G(реакционная идеология)§!"
