--- a/localisation/russian/MD_focus_RAJ_l_russian.yml
+++ b/localisation/russian/MD_focus_RAJ_l_russian.yml
@@ -233,7 +233,7 @@
  RAJ_BRICS_as_polit_alliance_desc: "Объединение наших целей по достижению сбалансированной динамики мировой мощи делает естественным создание оборонного пакта BRICS. Этот пакт будет обеспечивать взаимную оборонную помощь, укрепляя связи между странами-участницами и обеспечивая коллективную безопасность от внешних угроз."
  RAJ_new_development_bank: "Новый банк развития"
  RAJ_new_development_bank_desc: "Новый Банк развития должен стать основой для интеграции BRICS и улучшения отношений между странами-участницами."
- RAJ_recognition_tibet_as_china: "Признание Тибета Китаем"
+ RAJ_recognition_tibet_as_china: "Признание Тибета частью Китая"
  RAJ_recognition_tibet_as_china_desc: "Правительство Индии вскоре после обретения независимости в 1947 г. рассматривало Тибет как фактически независимую страну. Однако в последнее время индийская политика в отношении Тибета учитывает интересы Китая и признаёт Тибет частью КНР."
  RAJ_national_highway_project: "Проект развития национальных автомагистралей"
  RAJ_national_highway_project_desc: "Проект развития национальных автомагистралей - это проект четырехполосного строительства существующих национальных автомагистралей и шестиполосного строительства отдельных крупных национальных автомагистралей Индии. Проект был начат в 1998 году под руководством премьер-министра Атала Бихари Ваджпаи. Национальные автомагистрали составляют всего около 2% от общей протяженности дорог, но на них приходится около 40% общего объема перевозок по всей стране."
@@ -1067,7 +1067,7 @@
  RAJ_full_india_programme: "Полная индийская программа"
  RAJ_full_india_programme_desc: "Хотя это будет трудно осуществить, к этой программе должна быть подключена вся Индия."
  RAJ_only_ujjwala: "Только один регион"
- RAJ_only_ujjwala_desc: "Только самые бедные регионы должны иметь такую привилегию, чтобы сбалансировать социальную ситуацию в стране."
+ RAJ_only_ujjwala_desc: "Только самые бедные регионы должны иметь такую ​​привилегию, чтобы сбалансировать социальную ситуацию в стране."
  RAJ_prior_hindus: "Приоритет индусам"
  RAJ_prior_hindus_desc: "Индусы - основа индийского государства. Мы должны всячески отдавать им предпочтение."
  RAJ_coal_with_right_wing: "Коалиция с военными"
@@ -1820,7 +1820,6 @@
  indian_event.58.a: "Yuck!"
  RAJ_true_market: "Правильный рынок"
  RAJ_balancing_approach_idea: "Балансовый подход"
- RAJ_decommdify_the_basics_idea: "Декоммодификация основ"
  RAJ_a_rising_power_idea: "Восходящая сила"
  RAJ_a_rising_power_idea_desc: "Индия находится на подъёме в мире, и по мере того, как мы укрепляемся на мировой арене, на нас продолжают смотреть пристальные взгляды других стран."
  RAJ_pro_lgbtqa_stance_idea: "Про-LGBTQIA позиция"
@@ -1837,3 +1836,4 @@
  RAJ_Local_markets: "Местная индийская торговля"
  RAJ_focus_mao_pol_below_ten_TT: "§YПолитическое влияние маоистов ниже 10.§!"
  RAJ_focus_mao_str_below_ten_TT: "§YВоенная мощь маоистов ниже 10.§!"
+ RAJ_decommodify_the_basics_idea: "Декоммерческая Основа"
