--- a/localisation/russian/MD_focus_SPR_l_russian.yml
+++ b/localisation/russian/MD_focus_SPR_l_russian.yml
@@ -1799,8 +1799,6 @@
  SPR_end_the_loophole_idea_desc: "Ликвидация налоговых лазеек, предусмотренных в нашем налоговом кодексе, поможет снять налоговое бремя с самых бедных граждан и переложить его на плечи богатых."
  SPR_keynesian_economic_idea: "Кейнсианская экономическая политика"
  SPR_keynesian_economic_idea_desc: "Переход от экономической модели монетаризма к кейнсианской теории может способствовать экономическому росту Испании. Цены по своей природе являются жесткими, поэтому мы должны сохранить роль государства в экономике."
- SPR_decommdify_the_basics_idea: "Избавьтесь от основ"
- SPR_decommdify_the_basics_idea_desc: "Основы не следует рассматривать как товар. Это основа, и к ней следует относиться как к таковой."
  SPR_collectiveness_egalitarianism_idea: "Коллективный эгалитаризм"
  SPR_collectiveness_egalitarianism_idea_desc: "Обеспечение потребностей каждого человека и предоставление ему широких возможностей позволяет коллективу оставаться сильным и процветающим."
  SPR_libertad_idea: "Либертад"
@@ -1848,3 +1846,5 @@
  spain.267.a: "Откажитесь от визита"
  spain.267.b: "Это их город..."
  SPR_visited_ceuta: "Посетил Сеуту и ​​Мелилью."
+ SPR_decommodify_the_basics_idea: "Декоммодифицировать основы"
+ SPR_decommodify_the_basics_idea_desc: "Базовые вещи не следует считать товаром. Они являются базовыми и должны рассматриваться как таковые."
