--- a/localisation/simp_chinese/MD_focus_BRA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BRA_l_simp_chinese.yml
@@ -9,7 +9,7 @@
  BRA_eneas: "埃内亚斯总统"
  BRA_eneas_desc: "热图利奥·巴尔加斯的遗产给巴西民族主义者埃内亚斯·卡内罗带来了很多启发，现在他是巴西总统。他能否让巴西成为一个强大而伟大的国家，并将巴西转变为一个全球超级大国？"
  BRA_nossa_economia: "经济状况"
- BRA_nossa_economia_desc: "1997年的亚洲金融危机波及了全球市场。巴西不再能从庞大的出口工业中获取的利润减少，卡多佐的政策也没能弥补损失。"
+ BRA_nossa_economia_desc: "1997 年亚洲金融危机在全球市场引起轩然大波。巴西庞大的出口产业带来的利润缩水，而卡多佐的政策未能迅速解决损失。让我们鼓励经济增长，最终扭转这场最不幸的经济衰退的影响！"
  BRA_the_internal: "走向社会主义"
  BRA_the_internal_desc: "我们的国家问题重重。我们该如何解决？社会主义是答案么？"
  BRA_nosso_povo: "巴西人民"
@@ -37,7 +37,7 @@
  BRA_increase_taxes: "增加税收"
  BRA_increase_taxes_desc: "增加税收对于支付我们将要创建的所有程序是必要的。"
  BRA_improve_the_public_sector: "改善公共部门"
- BRA_improve_the_public_sector_desc: "巴西的公共部门没有足够的投资来满足数百万使用它的巴西人的需求，因此它经常被废弃和报废。随着对公共部门的更多投资，我们将确保使用它的人可以有效地获得承诺的服务。"
+ BRA_improve_the_public_sector_desc: "由于历史上缺乏投资或兴趣，巴西的公共部门无法满足数百万巴西人的需求。通过增加对公共部门的投资，我们将确保公共部门的使用者能够高效地获得承诺的服务。"
  BRA_social_enterprises: "社会企业"
  BRA_social_enterprises_desc: "公有企业不是要私有化，而是要成为人民的企业和人民的企业。"
  BRA_economic_interventionism: "经济干预主义"
@@ -49,7 +49,7 @@
  BRA_encourage_consumption: "鼓励消费"
  BRA_encourage_consumption_desc: "消费的增加将带来我们现在需要的经济增长。"
  BRA_national_developmentalism: "国家发展主义"
- BRA_national_developmentalism_desc: "国家发展主义是多年前使巴西工业化和快速发展的原因。这些发展主义政策不应被放弃，而应重新实施。"
+ BRA_national_developmentalism_desc: "国家发展主义是巴西实现工业化和快速发展的关键。这些发展主义政策不应被抛弃，我们必须努力将他们实施。"
  BRA_social_programs_agenda_lula: "社会计划议程"
  BRA_social_programs_agenda_lula_desc: "卢拉以及整个劳工党都支持一个能够满足人民对有尊严生活的需求的强大国家。必须制定新的社会计划来实现党的议程。"
  BRA_expand_social_benefits: "扩大社会福利"
@@ -550,7 +550,7 @@
  BRA_reduce_debts: "减轻我们的负担"
  BRA_reduce_debts_desc: "为了提高社会民主党的声望和提振巴西的经济，我们需要减少外债。"
  BRA_expansive_spending: "扩大支出"
- BRA_expansive_spending_desc: "我们可以在投资工业上花费大量资金，来极大改善我们的经济。"
+ BRA_expansive_spending_desc: "我们可以投入大量的资金，通过投资工业来极大地改善我们的经济。"
  BRA_foreign_buyouts: "寻求海外投资"
  BRA_foreign_buyouts_desc: "我们可以获取海外的支持，花少量的钱来改善我们的经济。"
  BRA_ciro_gomes: "西罗·戈麦斯支持我们"
