--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -2,7 +2,6 @@
  CUB_parlament_one: "§G将解雇旧官僚并开始组建新人大§!"
  CUB_allow_elections_tt: "§G将被允许选举§!"
  CUB_allow_parties_tt: "§G我们将允许一些反对党存在§!"
- CUB_migel_comeback: "§Y米格尔·马里奥·迪亚斯将成为古巴共产党党魁§!§G（新兴主义派）§!"
  cuba_alba_tt: "将解锁美洲玻利瓦尔联盟决议"
  CUB_start_democratic_venezuellas: "§!我们将在委内瑞拉发起民主革命§!"
  CUB_has_updated_the_military_trigger_TT: "没有国家精神§R过时的军事力量§!"
@@ -1101,3 +1100,4 @@
  cuba.74.a: "悲哀"
  CUB_russian_bases: "俄罗斯在古巴的基地"
  CUB_russian_bases_desc: "既然美国不愿意与我们谈判，那么他们现在就会与俄罗斯武装部队谈判。"
+ CUB_miguel_comeback: "§Y米格尔·马里奥·迪亚斯将成为古巴共产党党魁§!§G（新兴主义派）§!"
