--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -43,7 +43,7 @@
  EU_voting_category: "欧盟"
  EU_voting_category_desc: "[ROOT.GetFlag]欧洲怀疑主义:[?ROOT.eurosceptic|§%R1]\n欧洲怀疑论又称欧盟怀疑论，是指对欧盟和欧洲一体化的批评。根据民意调查，这个比例代表了在本国进行欧盟成员国公投时，可能会投票支持退出欧盟的人数。\n\n[EUU.GetFlag]欧洲主义：[?global.var_europeanism|§%G1]\n欧洲主义又称亲欧主义，有时也称欧盟主义，是一种赞成欧洲一体化和加入欧盟的政治立场。它包括更激进的欧洲联邦主义者，他们寻求建立一个非正式地称为欧洲合众国的单一超级国家。一个相关的术语是 \"亲欧派\"。这个比例代表了整个欧盟中的亲欧派人士。\n\n[ROOT.GetFlag]违反欧洲联盟的价值观：[?ROOT.breach_of_EU_value|§g0]\n“欧盟建立在尊重人的尊严、自由、民主、平等、法治和尊重人权，包括属于少数群体的人的权利的价值观之上。在一个多元、不歧视、宽容、正义、团结和性别平等的社会中，这些价值观念是各成员国的共同价值观念。”\n- 欧洲联盟条约，第2条\n\n"
  EU_info.1.t: "欧盟价值观体系"
- EU_info.1.d: "欧盟价值观：\n违反问题 - 违反级别\n\n法律规则：\n瘫痪性腐败 - 5\n严重腐败 - 4\n猖獗腐败 - 3\n肆无忌惮的腐败 - 2\n系统性腐败 - 1\n\n尊重人的尊严和自由：\n与欧盟成员国有进攻性战争 - 10\n是共产主义政府 - 2\n是反动主义政府 - 2\n联合政府中有共产主义 - 1\n联合政府中有反动主义 - 1\n\n民主：\n无选举 - 5\n独裁 - 5\n共产主义独裁 - 5\n法西斯独裁 - 5\n是傀儡 - 4\n干涉政策为新帝国主义 - 1\n\n妇女和少数民族权利：\n女性禁止服役 - 1\n选举阈值达到10% - 1\n\n“不救援”条款：\n破产 - 1\n提供救助 - 1"
+ EU_info.1.d: "欧盟价值观：\n违规问题 - 违规等级\n\n法律规则：\n瘫痪性腐败 - 5\n严重腐败 - 4\n猖獗腐败 - 3\n肆无忌惮的腐败 - 2\n系统性腐败 - 1\n\n尊重人的尊严和自由：\n与欧盟成员国有进攻性战争 - 10\n是共产主义政府 - 2\n是反动主义政府 - 2\n联合政府中有共产主义 - 1\n联合政府中有反动主义 - 1\n\n民主：\n无选举 - 5\n独裁 - 5\n共产主义独裁 - 5\n法西斯独裁 - 5\n是傀儡 - 4\n干涉政策为新帝国主义 - 1\n\n妇女和少数民族权利：\n女性禁止服役 - 1\n选举阈值达到10% - 1\n\n“不救援”条款：\n破产 - 1\n提供救助 - 1"
  EU_info.1.a: "好"
  EU_Voting_cheat: "欧盟投票作弊"
  EU_Clear_Voting_cheat: "欧盟清除失败的投票"
@@ -2823,7 +2823,7 @@
  active_agenda_header: "§Y当前活动议程§!"
  list_of_available_laws_header: "§H可用的欧盟改革§!"
  system_of_eu_values_text: "§Y欧洲价值观§!"
- system_of_eu_values_tt: "欧洲价值观体系：\n欧盟价值观：\n违规问题 - 违规程度\n\n法律规则：\n瘫痪性腐败 - 5\n严重腐败 - 4\n猖獗腐败 - 3\n无节制的腐败 - 2\n系统性腐败 - 1\n\n尊重人的尊严和自由：\n与欧盟成员国发生进攻性战争 - 10\n有共产主义政府 - 2\n有反动主义政府 - 2\n有共产主义政党加入执政联盟 - 1\n有反动主义政党加入执政联盟 - 1\n\n民主：\n没有选举 - 5\n独裁 - 5\n共产主义独裁 - 5\n法西斯独裁 - 5\n为傀儡国 - 4\n新帝国主义 - 1\n\n妇女和少数群体权利：\n禁止女性服役 - 1\n选举门槛10% - 1\n\n无救助条款：\n破产 - 1\n给予救助 - 1"
+ system_of_eu_values_tt: "欧洲价值观体系：\n欧盟价值观：\n违规问题 - 违规等级\n\n法律规则：\n瘫痪性腐败 - 5\n严重腐败 - 4\n猖獗腐败 - 3\n无节制的腐败 - 2\n系统性腐败 - 1\n\n尊重人的尊严和自由：\n与欧盟成员国发生进攻性战争 - 10\n有共产主义政府 - 2\n有反动主义政府 - 2\n有共产主义政党加入执政联盟 - 1\n有反动主义政党加入执政联盟 - 1\n\n民主：\n没有选举 - 5\n独裁 - 5\n共产主义独裁 - 5\n法西斯独裁 - 5\n为傀儡国 - 4\n新帝国主义 - 1\n\n妇女和少数群体权利：\n禁止女性服役 - 1\n选举门槛10% - 1\n\n无救助条款：\n破产 - 1\n给予救助 - 1"
  total_mep_text: "欧盟议会议员总数：[?global.MEP_Total|C0]"
  total_mep_tt: "欧洲议会议员总数"
  eu_parliament_majority_text: "多数派：[?global.MEP_Majority|O0]"
@@ -3107,7 +3107,7 @@
  EU_prepared_no_deal_exit_desc: "§C[EUU.GetFlag]欧盟§!及其软弱的走狗和布鲁塞尔那些自以为是的官僚们拒绝给我们一份有利的脱欧协议。除非情况有所好转，否则我们必须为不可避免的无协议脱欧做好准备。"
  tooltip_EU_parliament_focus__remove: "我们目前没有活跃的议程项目。如果欧洲议会有会议，请将项目列入议程。"
  tooltip_focus_Supermajority_trigger: "我们目前在欧洲议会中居于统治地位。(当前：[?global.active_MEP_Support|0G] / [?global.MEP_Supermajority|0Y])"
- number_of_eu_breaches_greater_than_three: "[THIS.GetAdjective]§Y违反欧盟价值观的程度§!§R超过§!3(当前：[?THIS.breach_of_EU_value|0])"
+ number_of_eu_breaches_greater_than_three: "[THIS.GetAdjective]§Y违反欧盟价值观的等级§!§R超过§!3(当前：[?THIS.breach_of_EU_value|0])"
  can_determine_a_breach_of_values_ROOT: "[ROOT.GetNameWithFlag]必须是所有其他（投票）成员国中影响力排名前三的其中之一。"
  can_determine_a_breach_of_values_FROM: "[FROM.GetNameWithFlag]必须不是所有其他（投票）成员国中影响力排名前三的其中之一。"
  EU_any_current_eu_candidates: "欧盟候选国"
@@ -3334,3 +3334,4 @@
  EUvote.4.t: "欧盟理事会投票已准备就绪"
  EUvote.4.d: "欧洲理事会已准备好召开会议。您可以选择向欧洲理事会提出建议，或者 AI 将在两周后向会议提交法案。"
  EUvote.4.a: "去投票吧！"
+ EU_level_of_breaches_less_than_3_tt: "违反欧盟价值观的等级§Y少于§!3(当前违规行为：[?THIS.breach_of_EU_value|0R]) \n"
