--- a/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
@@ -875,14 +875,14 @@
  GEO_money_navyusa: "美国海军伙伴关系计划"
  GEO_patrol_cather: "格鲁吉亚海岸警卫队"
  geo_misc.3.t: "格鲁吉亚提出互不侵犯条约"
- geo_misc.3.d: "格鲁吉亚希望通过不让我们两国签署协议来实现该地区的稳固和平。"
+ geo_misc.3.d: "格鲁吉亚希望通过我们两国签署的协议来实现该地区的稳固和平。"
  geo_misc.3.a: "好主意!"
  geo_misc.3.b: "从不"
  geo_misc.4.t: "俄罗斯拒绝"
  geo_misc.4.d: "俄罗斯不会与我们签订任何条约。"
  geo_misc.4.a: "悲哀"
  geo_misc.5.t: "格鲁吉亚提出互不侵犯条约"
- geo_misc.5.d: "格鲁吉亚希望通过不让我们两国签署协议来实现该地区的稳固和平。"
+ geo_misc.5.d: "格鲁吉亚希望通过我们两国签署的协议来实现该地区的稳固和平。"
  geo_misc.5.a: "好主意!"
  geo_misc.5.b: "从不"
  geo_misc.5.c: "从不"
