--- a/localisation/simp_chinese/MD_focus_GRE_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GRE_l_simp_chinese.yml
@@ -3,9 +3,9 @@
  earthquake_diplomacy: "地震外交"
  airspace_violations: "领空入侵"
  GRE_debt_crisis: "债务危机"
- GRE_debt_crisis_desc: "希腊背负着3000亿美元的债务-是世界上负债最多的国家之一 。日益高涨的债务给国家国和经济造成了巨大的麻烦。我们需要在它失控对经济造成不可挽回的损害之前找到方法解决债务危机。"
+ GRE_debt_crisis_desc: "希腊的外债高达3000亿美元，是世界上最大的外债之一。这给我们带来了巨大的问题，因为债务正在迅速增加，给我们的经济带来了巨大的问题。我们必须找到一种方法来解决债务问题，以免它失控。"
  GRE_debt_crisis2: "债务危机"
- GRE_debt_crisis2_desc: "希腊背负着3000亿美元的债务-是世界上负债最多的国家之一 。日益高涨的债务给国家国和经济造成了巨大的麻烦。我们需要在它失控对经济造成不可挽回的损害之前找到方法解决债务危机。"
+ GRE_debt_crisis2_desc: "希腊的外债高达3000亿美元，是世界上最大的外债之一。这给我们带来了巨大的问题，因为债务正在迅速增加，给我们的经济带来了巨大的问题。我们必须找到一种方法来解决债务问题，以免它失控。"
  GRE_debt_crisis3: "债务危机"
  GRE_debt_crisis3_desc: "希腊背负着3000亿美元的债务-是世界上负债最多的国家之一 。日益高涨的债务给国家国和经济造成了巨大的麻烦。我们需要在它失控对经济造成不可挽回的损害之前找到方法解决债务危机。"
  GRE_legacy: "希腊遗产"
