--- a/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
@@ -6,10 +6,10 @@
  ITA_patrician_oligarchy: "贵族寡头"
  ITA_patrician_oligarchy_desc: "我们不能把管理国家的权力交给无经验的平民，应该让一小群聪明的人，也就是我们中间最富有的人，来主宰共和国的命运。"
  ITA_let_the_plebs_vote: "民主党参议院"
- ITA_let_the_plebs_vote_desc: "寡头统治和特权阶级的时代已经一去不复返了，现代社会要求我们要求我们听取那些不那么富有的人群的需求。但是老式代议民主制的失败不容被忽视，人们可能会投票给哪个政党，但他们的作用仅仅只是选择由哪位技术官僚组建政府。"
+ ITA_let_the_plebs_vote_desc: "寡头政治和特权时代已经一去不复返，现代社会要求我们倾听我们当中那些不那么富裕的人的需求。但旧代议制民主的失败不容忽视，人们可以投票给政党，但他们的作用只是选择哪位技术官僚来组建政府。"
  ITA_let_the_plebs_vote_TT: "参议院将通过技术官僚制向普通政党开放。"
  ITA_roma_capitale: "罗马中心"
- ITA_roma_capitale_desc: "几十年来，罗马一直被堪称灾难性的治理和长期以来的低效率所困扰，对于世界上最美丽的城市之一来说，这真是奇耻大辱。腐败、罪犯、黑帮、糟糕的服务业、持续的预算赤字以及许多其他问题必须得到解决，才能使这座城市再次焕发光彩。"
+ ITA_roma_capitale_desc: "罗马数十年来一直饱受治理不善和效率低下的困扰，作为世界上最美丽的城市之一，罗马却遭遇如此糟糕的治理，实在令人遗憾。要想让罗马重现辉煌，就必须解决腐败、犯罪、黑手党、糟糕的服务、持续的预算赤字和许多其他问题。"
  ITA_municipalities_corruption_rome: "自治市腐败"
  ITA_municipalities_corruption_rome_desc: "罗马的主城区被划分为几个自治市，但其中大多数都成为了腐败政治和黑帮渗透的牺牲品，而现有的权力架构往往阻碍了局势改善。我们必须打破这个死循环，才有机会改造这座城市。"
  ITA_casamonica_clan: "卡萨莫尼卡集团"
@@ -19,13 +19,13 @@
  ITA_flaming_buses_and_referendums: "燃烧的公共汽车和公投"
  ITA_flaming_buses_and_referendums_desc: "罗马公共交通的情况变得如此悲惨，以至于经常看到公共汽车因维护不善而起火。我们需要举行全民公决，从罗马公共交通公司ATAC手中夺回控制权，并打破目前阻碍改革的权力格局。"
  ITA_urban_waste_management_rome: "城市垃圾管理"
- ITA_urban_waste_management_rome_desc: "与意大利南部的许多其他城市一样，如那不勒斯，罗马在废物管理方面遇到问题，特别是因为其公共服务无法管理大城市产生的数量，我们需要提供更多资源并确保 他们没有像往常一样浪费。"
+ ITA_urban_waste_management_rome_desc: "与那不勒斯等意大利南部的许多其他城市一样，罗马的垃圾管理也存在问题，尤其是由于公共服务部门无力管理这个庞大城市产生的垃圾量，我们需要提供更多的资源，确保这些垃圾不会像往常一样被浪费。"
  ITA_wild_boar_epidemic: "野猪疫病"
- ITA_wild_boar_epidemic_desc: "大量未经管理的垃圾导致了数量惊人的野猪，它们出没了该地区的大部分地区，并经常冒险深入城市内部。既然废物问题已经解决，我们就可以解决野猪问题，而不用担心它再次出现。"
+ ITA_wild_boar_epidemic_desc: "大量未处理的垃圾导致野猪数量激增，它们已经侵扰了大部分地区，并经常深入城市内部。现在垃圾问题已经解决，我们可以解决野猪问题，而不必担心它再次出现。"
  ITA_widespread_absenteeism: "普遍旷工"
- ITA_widespread_absenteeism_desc: "罗马市每天约有 15% 的公职人员不上班。25% 的劳动力有资格跳过工作以帮助有特殊需要的亲属，而全国平均水平为 3%。旷工现象普遍存在，这已经不能再被容忍了。"
+ ITA_widespread_absenteeism_desc: "罗马市每天约有15%的公务员缺勤。25%的劳动力有权旷工以协助有特殊需要的亲属，而全国平均水平为3%。旷工现象普遍存在，这种情况再也不能容忍了。"
  ITA_chronic_strikes: "长期罢工"
- ITA_chronic_strikes_desc: "尽管罗马公共系统中的工人对无能和旷工表现出宽容，但罢工已成为另一种形式的旷工，对改变他们已经享有重要特权的情况几乎没有实际兴趣。"
+ ITA_chronic_strikes_desc: "尽管对无能和旷工表现出容忍度，但罗马公共系统中的工人仍会定期罢工，以至于罢工已经成为旷工的另一种形式，而工人几乎没有任何实际兴趣去改变他们已经享有重要特权的状况。"
  ITA_cinecitta: "翻新奇尼奇塔"
  ITA_cinecitta_desc: "奇尼奇塔是罗马的一个地区，大多数电视和电影行业的制作都在这里进行。尽管由于外国影响和米兰竞争的加剧而失去了一些相关性，但奇尼奇塔仍有空间成为全球意大利文化的灯塔。"
  ITA_all_roads_lead_to_rome: "条条大路通罗马"
@@ -43,9 +43,9 @@
  ITA_political_instability: "政局动荡"
  ITA_political_instability_desc: "意大利的政局是出了名的不稳定，政府在几个月的时间里忽上忽下，执政党的意识形态转变没有任何限制。"
  ITA_italian_media: "意大利媒体"
- ITA_italian_media_desc: "电视台是意大利迄今为止最具影响力的媒体，因为绝大多数人以它作为唯一依赖的信息来源。报纸是第二高的媒体，至今每天仍有上百万读者。除了议会的官方电台——Radicale电台，几乎没有任何电台涉足政治。"
+ ITA_italian_media_desc: "电视是意大利迄今为止最具影响力的媒体，因为绝大多数人都依赖电视作为唯一的信息来源。报纸是第二大媒体，每天仍有数百万读者。除了激进电台（意大利议会官方广播电台）外，很少有广播电台与政治相关。"
  ITA_italian_newspapers: "意大利报纸"
- ITA_italian_newspapers_desc: "在电视台之下，报纸是影响力第二大的媒体，《共和报》、《新闻报》和《晚邮报》等重量级媒体报纸的日销量高达数十万份。尽管新闻传统已经有一个世纪了，但报纸的质量已经显著下降，记着越来越多地在政治和科学问题上追求令人震怒的事件和噱头，而不是真相。"
+ ITA_italian_newspapers_desc: "报纸是继电视之后第二大媒体，《共和报》、《新闻报》和《晚邮报》等重量级报纸日销量达数十万份。尽管新闻业有着百年历史，但报道质量却大幅下降，记者在政治和科学问题上越来越追求抗议和喧嚣，而不是真相。"
  ITA_enforce_factchecking: "执行内容审查"
  ITA_enforce_factchecking_desc: "为了制止令人担忧的报道恶化趋势，我们需要确保独立实体对文章进行适当的事实核查，报纸要依靠严格的科学或技术新闻来源。"
  ITA_enforce_retraction: "强制撤回"
