--- a/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
@@ -1784,8 +1784,6 @@
  SPR_end_the_loophole_idea_desc: "结束税收法规中的税收漏洞将有助于抵消我们最贫穷的公民的税收负担，并将它牢牢地放在富人的肩上。"
  SPR_keynesian_economic_idea: "凯恩斯经济政策"
  SPR_keynesian_economic_idea_desc: "从莫内塔主义经济模式向凯内斯理论的转变也许能够为西班牙的经济增长带来益处。由于价格本质上是死板的，所以我们应该保持政府在经济中的作用。"
- SPR_decommdify_the_basics_idea: "分解生活用品"
- SPR_decommdify_the_basics_idea_desc: "基本生活用品不应被视为一种商品。它是基本的，应该这样对待。"
  SPR_collectiveness_egalitarianism_idea: "集体平等主义"
  SPR_collectiveness_egalitarianism_idea_desc: "确保每个人的需求并确保他们有充足的机会可以确保集体保持强大和繁荣。"
  SPR_libertad_idea: "自由"
@@ -1848,3 +1846,5 @@
  spain.267.a: "否认访问"
  spain.267.b: "这是他们的城市..."
  SPR_visited_ceuta: "访问过休达与梅利利亚"
+ SPR_decommodify_the_basics_idea: "基础用品去商品化"
+ SPR_decommodify_the_basics_idea_desc: "基础用品不应被视为商品。它是一种基本用品，应如此对待。"
