--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -4598,7 +4598,7 @@
  SPR.Nat_Fascism_desc: "长枪党 - 方阵是由弗兰西西奥·佛朗哥领导的原始长枪党的精神继承者。它坚信长枪党的教义，并且极端怀疑欧洲。\n"
  SPR.Nat_Populism: "£SPR_espana_2000 西班牙平台2000"
  SPR.Nat_Populism_icon: "£SPR_espana_2000"
- SPR.Nat_Populism_desc: "右翼民粹主义派 - 西班牙平台2000是一个支持反欧盟价值观和西班牙民族主义的右翼民粹主义政党。他们为家庭的传统角色和回归天主教统治的西班牙而纠察。\n"
+ SPR.Nat_Populism_desc: "右翼民粹主义派 - 西班牙平台2000是一个支持反欧盟价值观和西班牙民族主义的右翼民粹主义政党。他们抗议家庭的传统角色并要求恢复天主教主导的西班牙。\n"
  SPR.Nat_Populism_2017: "£SPR_vox VOX"
  SPR.Nat_Populism_2017_icon: "£SPR_vox"
  SPR.Nat_Populism_2017_desc: "右翼民粹主义派 - Vox是一个在西班牙崛起的政党。这是一个极右翼的极端民族主义政党。它从人民党中分离出来，运行着一个西班牙民族主义、坚定的保护主义和经济自由主义的纲领。尽管经济自由主义不是该党的核心标志。它还促使人们回归到更传统和本土主义的方式来管理西班牙。\n"
