--- a/localisation/braz_por/MD_focus_CUB_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_CUB_l_braz_por.yml
@@ -4,7 +4,6 @@
  raul_strenght_power_tt: "§GRaul fortalecerá sua posição no partido§!"
  CUB_allow_elections_tt: "§GEleições serão permitidas§!"
  CUB_allow_parties_tt: "§GVamos permitir alguns partidos de oposição§!"
- CUB_migel_comeback: "§YMigel Mario Diaz se tornará líder do Partido Comunista de Cuba§! §G(visualização emergente)§!"
  cuba_alba_tt: "Abrirá decisões da ALBA"
  CUB_start_democratic_venezuellas: "§!Vamos iniciar a revolução democrática na Venezuela§!"
  CUB_has_updated_the_military_trigger_TT: "Não possui o espírito nacional §RObsoleto Força Militar§!"
@@ -1101,3 +1100,4 @@
  cuba.74.a: "Triste"
  CUB_russian_bases: "Bases Russas em Cuba"
  CUB_russian_bases_desc: "Como os EUA não querem falar connosco, vão agora falar com as forças armadas russas."
+ CUB_miguel_comeback: "§YMiguel Mario Diaz se tornará líder do Partido Comunista de Cuba§! §G(visualização emergente)§!"
