--- a/localisation/french/MD_traits_l_french.yml
+++ b/localisation/french/MD_traits_l_french.yml
@@ -178,7 +178,6 @@
  Cat_AIR_ENG_research: "Vitesse de recherche sur les moteurs à air"
  Cat_ASW_HELI_research: "Vitesse de recherche des hélicoptères anti-sous-marins"
  internet_tech_research: "Vitesse de recherche sur toute la technologie Internet"
- Cat_FUEL_OIL_research: "Vitesse de recherche sur les technologies de traitement du carburant et du pétrole"
  Cat_missile_research: "Vitesse de recherche de tous les missiles"
  Cat_BM_research: "Vitesse de recherche sur les missiles balistiques"
  Cat_ICBM_research: "Vitesse de recherche sur les missiles balistiques intercontinentaux"
@@ -478,3 +477,5 @@
  CAT_satellite_research: "Vitesse de recherche des satellites"
  CAT_nuclear_weapons_research: "Vitesse de la recherche sur les armes nucléaires"
  CAT_nuclear_reactors_research: "Vitesse de recherche sur les réacteurs nucléaires"
+ CAT_renewable_research: "Vitesse de recherche sur les technologies d'énergie renouvelable"
+ CAT_fuel_oil_research: "Vitesse de recherche sur les technologies de traitement du carburant et du pétrole"
