--- a/localisation/polish/MD_internal_factions_l_polish.yml
+++ b/localisation/polish/MD_internal_factions_l_polish.yml
@@ -426,7 +426,7 @@
  internal_faction_subsidize_convoy_production_desc: "Na żądanie suchych doków, które potrzebowały dodatkowego przepływu środków pieniężnych, dofinansowaliśmy produkcję konwojowych frachtowców."
  internal_faction_decreased_investments: "Zmniejszone inwestycje"
  internal_faction_decreased_investments_desc: "Podejmując decyzje gospodarcze, inwestycje firm spowalniają"
- internal_factions_allowed_foreign_nationals_military: "Dozwoleni cudzoziemcy w wojsku"
+ internal_factions_allowed_foreign_nationals_military: "Usługa Gwarancje Obywatelstwa"
  internal_factions_allowed_foreign_nationals_military_desc: "Niedawno uchwaliliśmy ustawy i ustawodawstwo zezwalające obcokrajowcom na służbę wojskową bez wymogu posiadania obywatelstwa. Stało się to dla wojska metodą rekrutacji nowych żołnierzy, ale spowodowało pewną niestabilność w szeregach."
  internal_factions_temporarily_reduce_migrations: "Tymczasowo zmniejszone cele migracji"
  internal_factions_temporarily_reduce_migrations_desc: "Ze względu na naciski ze strony określonych zagranicznych grup interesu w kraju obniżyliśmy nasze cele migracyjne."
@@ -639,3 +639,14 @@
  the_military_add_30_tt: "§YWojsko§! Opinia §G+30§!\n"
  the_military_add_35_tt: "§YWojsko§! Opinia §G+35§!\n"
  the_military_add_40_tt: "§YWojsko§! Opinia §G+40§!\n"
+ the_ulema_minus_5_tt: "§Y$the_ulema$§! Opinia §R-5§!\n"
+ the_clergy_minus_5_tt: "§Y$the_clergy$§! Opinia §R-5§!\n"
+ wahabi_ulema_minus_5_tt: "§Y$wahabi_ulema$§! Opinia §R-5§!\n"
+ the_priesthood_minus_5_tt: "§Y$the_priesthood$§! Opinia §R-5§!\n"
+ impose_taxes_on_religious_institutions_decision: "Nałożyć podatki na instytucje religijne"
+ impose_taxes_on_religious_institutions_decision_desc: "Instytucje religijne w naszym kraju są obecnie ponad prawem w oczach naszego urzędu skarbowego. Powinniśmy wprowadzić nowe regulacje dotyczące opodatkowania tych podmiotów, aby wnieść dodatkowe fundusze do skarbu państwa."
+ repeal_taxes_on_religious_institutions_decision: "Uchyl podatki od instytucji religijnych"
+ repeal_taxes_on_religious_institutions_decision_desc: "Ostatnie podatki, które nałożyliśmy na instytucje religijne, przyniosły o wiele więcej negatywnych konsekwencji, niż w przeciwnym razie by przyniosły. Prawdopodobnie powinniśmy rozważyć uchylenie tych praw."
+ internal_factions_taxing_religious_institutions: "Opodatkowanie instytucji religijnych"
+ internal_factions_taxing_religious_institutions_desc: "Rząd zaczął nakładać podatki na instytucje religijne w kraju. Pomaga to w niedoborze budżetowym rządu, ale kosztem dezaprobaty frakcji religijnych w naszym kraju."
+ internal_factions_taxing_religious_institutions_tt: "Dodatkowy dochód z §YOpodatkowania instytucji religijnych§!: $$[?additional_income_taxing_religious_institutions|G3]"
