--- a/localisation/russian/MD_focus_EU_l_russian.yml
+++ b/localisation/russian/MD_focus_EU_l_russian.yml
@@ -3334,3 +3334,4 @@
  EUvote.4.t: "Голосование в Совете ЕС готово к сессии"
  EUvote.4.d: "Европейский совет готов к сессии. Вы можете предложить что-то Европейскому совету, или МА предложит законопроект на рассмотрение сессии через две недели."
  EUvote.4.a: "На выборы!"
+ EU_level_of_breaches_less_than_3_tt: "Level of Breach of European Union Values is §YLess Than§! 3 (Current Breaches: [?THIS.breach_of_EU_value|0R])\n"
