--- a/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
@@ -325,8 +325,6 @@
  CES_liberals_modifier10_tt: "$CES_liberals_modifier_tt_intro$\n£population_texticon 每月人口增长：§G+5.00%§! \n£stability_texticon 稳定度：§G+2.00%§!\n£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n\n"
  CES_liberals_modifier11_tt: "$CES_liberals_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+15.00%§! \n£stability_texticon 稳定度：§G+8.00%§! \n\n"
  CES_liberals_modifier12_tt: "$CES_liberals_modifier_tt_intro$\n£western_outlook_campaign_cost_modifier_texticon 每日亲西方主义每日新增支持率：§G+0.04§! \n\n"
- CES_economical_affairs: "经济事务"
- CES_economical_affairs_desc: "千禧初年值得被所有中亚国家铭记，这是它们经济发展和转型的复杂环境中挣扎的过渡期。"
  CES_exploit_natural_resources: "开发自然资源"
  CES_exploit_natural_resources_desc: "中亚地区以其多样的地貌和丰富的自然资源而闻名，在历史上一直是自然资源开发的焦点。"
  CES_uranium_extraction: "铀矿开采"
@@ -339,8 +337,6 @@
  CES_metal_extraction_desc: "中亚是各种金属，包括铜、银和稀土元素的开采中心。该地区丰富的矿产资源促进了采矿业的蓬勃发展。"
  CES_increase_privatisation: "提高私有化程度"
  CES_increase_privatisation_desc: "我们将从私有化中获益良多，但外国影响将会削弱我们的控制。"
- CES_enlargen_the_mines: "扩大采矿业"
- CES_enlargen_the_mines_desc: "我们需要扩大矿场，以扩大采矿业。"
  CES_natural_gas: "天然气"
  CES_natural_gas_desc: "中亚地区的天然气开采完全覆盖了天然气的钻探、加工和运输，以满足国内和国际能源需求。该地区的天然气资源具有重要的经济意义，可促进地区合作和全球能源贸易。"
  CES_oil_extraction: "石油开采"
@@ -404,7 +400,7 @@
  CES_attract_tourists: "吸引旅游者"
  CES_attract_tourists_desc: "吸引旅游者"
  CES_special_gambling_regions: "特别赌博区"
- CES_special_gambling_regions_desc: "普尔经济部长提出了特殊赌博区项目以增加我们的经济。"
+ CES_special_gambling_regions_desc: "我们的经济部长提出了特殊赌博区项目来促进我们的经济发展。"
  CES_russian_it_specialists: "俄罗斯IT精英"
  CES_russian_it_specialists_desc: "俄罗斯IT精英正在寻找新的地方来安置他们的公司我们的国家是最适合的地方！"
  CES_agricultural_reneissance: "农业复兴"
@@ -1291,3 +1287,7 @@
  UZB_karakalpakstan.4.a: "支持卡拉卡尔帕克人"
  UZB_karakalpakstan.4.b: "支持乌兹别克人"
  Karakalpaks_rebelled_yes: "卡拉卡尔帕克斯坦已然叛乱"
+ CES_economic_affairs: "经济事务"
+ CES_economic_affairs_desc: "21世纪初期，中亚国家正经历复杂的经济发展和转型时期。"
+ CES_enlarge_the_mines: "扩大矿山"
+ CES_enlarge_the_mines_desc: "扩大矿山是扩大我们的采矿业所必需的。"
